--- a/articles/rfi/999950.md
+++ b/articles/rfi/999950.md
@@ -1,5 +1,5 @@
-<!--1713712502000-->
-[日本首相向靖国神社奉献祭品  大臣参拜靖国神社](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240421-%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81-%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE)
+<!--1713746705000-->
+[311比112 美国会众议院通过608亿美元援乌法案](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240420-311%E6%AF%94112-%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87610%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88)
 ------
 
-<div>21/04/2024 - 09:57</div><img src="https://s.rfi.fr/media/display/3ceea9d8-1583-11ea-9068-005056bf7c53/w:1280/p:16x9/Yasukuni%201%20-%20pluie_0.jpg"><p><strong>一年一度的靖国神社“春大祭”于21日至23日在东京九段靖国神社举行。岸田首相献上名为“真榊”的祭品。        </strong></p><div><p>岸田首相自2021年10月就任首相以来，都在8月15日二战结束纪念日以及春秋两季靖国神社的定期祭典献上名为“真榊”的祭品，据透露，到23日“春大祭”结束，岸田首相本人不会去参拜靖国神社。</p><p>岸田内阁成员中，经济再兴大臣新藤义孝21日上午参拜了靖国神社。他表示：“我满怀崇敬的心情，参拜了那些曾经全心全意为国家奋斗的人们的英灵。”他表示，参拜靖国神社是“私人行为”。他还表示：“我向英灵汇报了三月底在硫磺岛举行了日美联合追悼会。”</p><p>新藤义孝是二战末期日美硫磺岛战役中日方担任指挥官的栗林忠道中将的外孙。</p><p>日本众参两院议长也献上祭品“真榊”。</p><p>韩国外交部21日对日本首相岸田文雄向靖国神社供奉祭品“真榊”以及部分大臣参拜靖国神社表示“深感失望和遗憾”。外交部在一份发言人评论中指出：“日本负有责任的领导人反复祭祀并参拜了美化侵略战争、合祀战犯的靖国神社。”评论敦促“日本负责任的领导人正视历史，在行动中表现出对过去谦虚的反思和真心的反省”，这是“面向未来的日韩关系发展的重要基础”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXFm.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240421-%25E6%2597%25A5%25E6%259C%25AC%25E9%25A6%2596%25E7%259B%25B8%25E5%2590%2591%25E9%259D%2596%25E5%259B%25BD%25E7%25A5%259E%25E7%25A4%25BE%25E5%25A5%2589%25E7%258C%25AE%25E7%25A5%25AD%25E5%2593%2581-%25E5%25A4%25A7%25E8%2587%25A3%25E5%258F%2582%25E6%258B%259C%25E9%259D%2596%25E5%259B%25BD%25E7%25A5%259E%25E7%25A4%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81%20%20%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%20-%20https%3A%2F%2Frfi.my%2FAXFm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81%20%20%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%20-%20https%3A%2F%2Frfi.my%2FAXFm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXFm.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81%20%20%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 20:04</div><img src="https://s.rfi.fr/media/display/68fcb402-ff3f-11ee-a91e-005056bfb2b6/w:1280/p:16x9/Capture-2205.JPG"><p><strong>4月20日，美国国会众议院以311比112票通过了《2024年乌克兰安全补充拨款法案》（H.R.8035）。所有民主党议员都投了赞成票。共和党议员的赞成与反对投票几乎持平，101票赞成，112票反对，1票弃权。该法案通过时，民主党人和旁听席上的来宾欢呼雀跃。众议院议长约翰逊（Mike Johnson）警告说，在会场上挥舞旗帜是“违反礼仪”的行为。        </strong></p><div><p>该援助计划提供608.4亿美元援助乌克兰，其中138亿美元用于乌克兰购买先进武器，134亿美元用于补充美军库存，110亿美元用于支持美国在欧洲的盟友，另外138亿美元用于为乌克兰购买美国防御系统。 </p><p>还有90亿美元将作为经济援助拨给乌克兰这个饱受战争蹂躏的国家，这些援助将以贷款的形式提供，经美国国会批准后总统可以免除这些贷款。该方案现在将提交参议院表决，然后交由拜登总统签署。拜登已表示，一旦国会通过，他将签署这些法案。</p><p>得知消息后，乌克兰总统泽连斯基（Volodymyr Zelenskyy）通过社交媒体平台X表示：“感谢美国众议院两党以及议长迈克·约翰逊（Mike Johnson）本人作出的决定，让历史沿着正确的轨道前进”。</p><p>泽连斯基补充说：“民主与自由永远具有全球意义，只要美国帮助保护民主与自由，民主与自由就永远不会失败。众议院今天通过的至关重要的美国援助法案将阻止战争扩大，拯救成千上万人的生命，并帮助我们两国变得更加强大”。</p><p>泽连斯基说：“只有通过实力才能实现公正的和平与安全。我们希望这些法案能够得到参议院的支持，并递交给拜登总统。谢谢你，美国！”</p><p>拜登（Joe Biden）周六通过白宫发表的声明表示：“今天，众议院两党议员投票决定推进我们的国家安全利益，并就美国在世界舞台上的领导力发出了明确的信息。在这个关键的转折点上，他们齐心协力，响应历史的召唤，通过了急需的国家安全立法，这是我几个月来为之奋斗的目标”。</p><p>拜登说：“这一一揽子计划将为以色列和乌克兰提供重要支持；为加沙、苏丹、海地以及世界各地受冲突和自然灾害影响的其他地区提供急需的人道主义援助；并加强印度-太平洋的安全与稳定”。</p><p>拜登续指：“在以色列面临来自伊朗的前所未有的攻击、乌克兰遭受俄罗斯持续轰炸的情况下，这是一个非常紧迫的时刻。我要感谢约翰逊议长、杰弗里斯（众议院民主党、Hakeem Jeffries）领袖以及众议院两党议员联盟，他们投票支持将我们的国家安全放在首位”。</p><p>拜登说：“我敦促参议院尽快将这一方案提交到我的办公桌上，以便我能够将其签署成为法律，我们也可以迅速向乌克兰运送武器装备，以满足他们的紧急战场需求”。</p><p>北约秘书长斯托尔滕贝格（Jens Stoltenberg）同样通过X平台表示：“我对美国众议院批准向乌克兰提供新的重大援助计划表示欢迎。乌克兰正在利用北约盟国提供的武器摧毁俄罗斯的作战能力。这使我们欧洲和北美更加安全”。</p><p>欧盟委员会主席冯德莱恩（Ursula von der Leyen）在X平台上写道：“我对美国众议院压倒性的赞成票表示欢迎。乌克兰应该得到针对俄罗斯的一切支持。现在，我们要求美国参议院尽快投票，因为这关系到生命。跨大西洋盟国团结一致，支持自由与民主”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXCL.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240420-311%25E6%25AF%2594112-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%259A%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E9%2580%259A%25E8%25BF%2587610%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583%25E6%258F%25B4%25E4%25B9%258C%25E6%25B3%2595%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=311%E6%AF%94112%20%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87608%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCL.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=311%E6%AF%94112%20%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87608%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCL.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXCL.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=311%E6%AF%94112%20%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87608%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
