--- a/articles/rfi/999953.md
+++ b/articles/rfi/999953.md
@@ -1,5 +1,5 @@
-<!--1713683707000-->
-[苹果在北京压力下下架Meta两款社交软件WhatsApp和Threads - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240420-%E8%8B%B9%E6%9E%9C%E5%9C%A8%E5%8C%97%E4%BA%AC%E5%8E%8B%E5%8A%9B%E4%B8%8B%E4%B8%8B%E6%9E%B6meta%E4%B8%A4%E6%AC%BE%E7%A4%BE%E4%BA%A4%E8%BD%AF%E4%BB%B6whatsapp%E5%92%8Cthreads)
+<!--1713746702000-->
+[美国或制裁一支以色列部队 内塔尼亚胡震怒](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240421-%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F-%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92)
 ------
 
-<div>20/04/2024 - 12:23</div><img src="https://s.rfi.fr/media/display/de712a84-105a-11ea-a2a3-005056bff430/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>周六（4月20日）法国主要报纸有关中国的报道主要集中于经济和社会，在北京的压力下，苹果清理在中国的应用程序虚拟商店App Store，删除了Meta旗下社交软件WhatsApp和Threads。权威《世界报》和经济性《回声报》都对此给与报道。                    </strong></p><div><p>WhatsApp是拥有30亿用户的世界领先通讯工具，但几天来，它已在中国无法下载，苹果公司周五证实，已从中国的虚拟苹果商店中删除该应有程序，其他已经消失的应用还有同属Meta的社交软件 Threads、以及Telegram 和 Signal。</p><p>报道指，此举尽管对Meta的经济影响微乎其微，因为在中国，WhatsApp的主要用户是一些外籍人士、留学生及外国游客，而所有的中国人使用的都是微信这一日常生活必不可少的超级应用，WhatsApp此前已被北京封锁多年，通常只能通过付费VPN翻墙软件才能访问和断续使用。</p><p>《世界报》写道，中国密切监控媒体和互联网，对其有严格的监管和审查，杜绝如何对国家政策可能有负面影响或造成动荡的内容。谷歌、油管等许多外国网站、应用程序和X、Instagram、Facebook等社交网络只有通过VPN才能使用。</p><p>现在，WhatsApp在中国将不再能下载。报道指，中国似乎希望对应用程序给与更多地控制，而此时这样做的矛盾之处是，中国正在恢复与外部世界的外交、文化和人文交流，并试图安抚外国企业来华投资以重振本国经济。此外，该措施也证实了苹果在中国的困难，以及该品牌在中国长期以来的所具有的标志性地位，相对于当局而言，该品牌可能的议价能力越来越弱。</p><p>根据苹果公司表示，正是中国国家网信办，出于“国家安全”的原因“命令”其删除这些应用程序。简言之，可能是苹果或Meta拒绝遵守一项新规定：自4月1日起，中国所有应用程序都必须在工信部正式“注册”，否则将停止在中国运营。据一直在分析该法规的律师事务所Dezan Shira称，该措施自2000年以来一直针对于网站实施，用以打击网络欺诈。微信上的“小应用”也受到影响。但为获得通过，应用程序必须提供潜在的敏感技术信息，例如服务器位置、IP 地址等。</p><p>这是否触及苹果的红线？苹果在一份声明中说，“我们有义务尊重我们经营所在国家的法律，即使我们并不同意”。据路透社报道，为什么苹果只删除了WhatsApp，而其他Meta应用程序，如Facebook、Instagram或Messenger等周五仍然可以下载，对此还有待观察，苹果和Meta目前没有给与置评。</p><p>无论如何这并不是首次外国应用程序被中国屏蔽，《回声报》提到2021 年，当北京接管火爆的私人在线辅导行业时，语言学习软件Duolingo在中国的应用商店中就被下架了近一年。2017 年，苹果也在其中国应用商店中删除《纽约时报》的应用程序今。</p><p>《回声报》指，苹果下架两款Meta应用是在该集团首席执行官库克于3月下旬访问中国之后。苹果在中国这一其全球第三大市场正面临困境：消费减弱，数百万公务员不再能公开购买iPhone，而来自中国品牌的本地竞争日益激烈。为重夺优势，最近苹果决定在上海开设第8家苹果店。目前上海的苹果店数量甚至已超过纽约。</p><p><strong>北京半程马拉松赛“放水”争议 何杰和三名外籍选手被取消成绩</strong></p><p>上周日北京半程马拉松比赛中国选手何杰夺冠争议是费加罗有关中国报道的另一话题，组织者周五宣布取消何杰和协助其夺冠的其他三名肯尼亚及埃塞俄比亚选手的获奖资格。比赛视频被网络疯传引发巨大争议，促使组织方在赛后展开调查。</p><p>画面中2023年亚运会马拉松金牌得主、中国运动员何杰在接近终点时一度被三名外籍选手超越，但后者随后似乎放慢速度，并示意何杰加速，这一画面令人惊讶。三名外籍选手之一的姆南加特之后告诉BBC说，他们三人是作为“野兔”参加，即只是负责带跑，但比赛中他们确是佩戴着参赛号码布参加了比赛。组委会在央视援引的声明中说，，三名外籍选手确实是配速员，但负责比赛的合作公司并未这样宣布而实际作为选手参赛。最终何杰和三名外籍选手被宣布取消比赛成绩。组委会对没有及时“发现并纠正”问题表示道歉。</p><p>此次争议引发了中国网络的巨大震撼，一位微博网民说，“体育精神被毁，这是一种耻辱”。报道回顾近年来多项中国体育赛事饱受争议。包括2019年徐州国际马拉松赛的一名参赛者被发现在比赛时骑自行车代跑，以及中国一支定向运动队因在军运会上“作弊”被取消参赛资格。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9E%97%E5%85%B0/" title="林兰">林兰</a></div></div></div></div>
+<div>21/04/2024 - 23:52</div><img src="https://s.rfi.fr/media/display/69cd6558-0029-11ef-b95e-005056bf30b7/w:1280/p:16x9/2024-03-27T000000Z_2099358366_RC2AU6ARAWY1_RTRMADP_3_ISRAEL-PALESTINIANS.JPG"><p><strong>美国媒体周日报道称，华盛顿准备对在约旦河西岸被占领区活动的以色列国防军内扎·耶胡达营（Netzah Yehuda）实施制裁。        </strong></p><div><p>以色列总理内塔尼亚胡周日愤怒地表示，他将与任何针对以色列军队因涉嫌侵犯人权而实施的制裁作斗争。</p><p>内塔尼亚胡对有关华盛顿可能对以色列军队的一支部队实施制裁的报道做出了强烈反应，这支部队被指在 10 月7日哈马斯发动袭击之前可能对约旦河西岸的巴勒斯坦人实施了虐待行为。</p><p>内塔尼亚胡周六称：“在我们的士兵与恐怖怪物战斗的时候，对以色列军队的一支部队实施制裁的意图是荒谬至极的，是对道德的侮辱”。他还在 X 上写道：“以色列军队绝不能受到制裁”。</p><p>周五，美国宣布了对被占领的约旦河西岸的以色列定居者实施一系列新的制裁措施，这令以色列当局大失所望。</p><p>内塔尼亚胡周日称：“如果你们认为可以对以色列国防军（IDF）的一支部队实施制裁，我将采取一切手段反对”。</p><p>周五，美国国务卿布林肯被问及有关美国将停止向以色列国防军某些部队提供军事援助的报道，报道指这与 在约旦河西岸发生的侵犯人权事件有关。</p><p>布林肯回答说： “我已经得出了一些结论，你们可以期待在今后几天内听到这些结论”。</p><p>美国国务卿提到了 “莱希法”，该法禁止美国政府在有可靠信息表明外国安全部队涉嫌侵犯人权时使用资金帮助他们。他补充说：“这是我们在各个层级实施的一项重要法律”。</p><p>布林肯继续表示： “我们进行这些调查（......）需要时间。在收集事实和分析事实方面都必须非常谨慎，而这正是我们所做的。我认为可以告诉你们很快就会看到结果”。</p><p>根据美国和以色列媒体报道，这支部队是 "Netzah Yehuda "营，主要由极端东正教士兵组成。</p><p>以色列政府战时内阁成员本尼-甘兹（Benny Gantz）周日发表声明说，他已与美国国务卿布林肯进行了交谈、劝阻他不要实施这些制裁。</p><p>美国国务院对此不予置评。布林肯周五表示，有关指控以色列违反一系列禁止向严重侵犯人权的个人或安全部队提供军事援助的美国法律一事，他已作出了决定。</p><p>周六，美国众议院投票赞成一项庞大的计划，其中包括向以色列提供数十亿美元的军事援助，特别是用于加强以色列的导弹防御盾牌“ 铁穹”。</p><p>六个多月来，以色列军队一直在加沙地带和黎巴嫩边境调动军队打击哈马斯，加沙地带和黎巴嫩边境几乎每天都会发生与亲伊朗的真主党交火的事件。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXLK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240421-%25E7%25BE%258E%25E5%259B%25BD%25E6%2588%2596%25E5%2588%25B6%25E8%25A3%2581%25E4%25B8%2580%25E6%2594%25AF%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E9%2583%25A8%25E9%2598%259F-%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1%25E9%259C%2587%25E6%2580%2592&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92%20-%20https%3A%2F%2Frfi.my%2FAXLK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92%20-%20https%3A%2F%2Frfi.my%2FAXLK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXLK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
