--- a/articles/rfi/999981.md
+++ b/articles/rfi/999981.md
@@ -1,5 +1,5 @@
-<!--1713586502000-->
-[应网信办要求 苹果从中国应用商店下架WhatsApp和Threads](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82-%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6whatsapp%E5%92%8Cthreads)
+<!--1713591902000-->
+[欧盟看到中国向俄罗斯供应军民两用产品的迹象](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1)
 ------
 
-<div>19/04/2024 - 22:27</div><img src="https://s.rfi.fr/media/display/ba5e9202-e847-11ee-9d09-005056a90284/w:1280/p:16x9/AP24082277039710.jpg"><p><strong>苹果公司4月19日表示，已将Meta公司旗下的应用程序WhatsApp和Threads从其在中国的应用商店下架，原因是中国政府以国家安全为由下令下架。        </strong></p><div><p>路透社报导指，根据应用程序跟踪公司七麦数据和AppMagic的数据，Telegram和Signal这两款外国通信应用程序也于周五被下架。这四款应用程序的下架表明，中央政府至少对一些不受其控制的外国在线信息服务越来越不能容忍。这也预示着苹果在中国的回旋余地越来越小。</p><p>尽管如此，根据路透社周五的查看，包括Facebook、Instagram和Messenger在内的其他Meta公司旗下的应用程序仍可下载。由西方公司开发的许多其他流行应用程序，包括YouTube和X（原推特），也可以下载。目前尚不清楚WhatsApp或Threads如何引起中国当局的安全担忧。</p><p>苹果公司在一封电子邮件声明中说：“基于他们的国家安全考虑，国家互联网信息办公室下令从中国店面下架这些应用程序”。该声明说：“我们有义务遵守我们运营所在国家的法律，即使我们有不同意见”。Meta公司拒绝发表评论，并将询问转给了苹果公司。</p><p>苹果公司没有回应就Signal和Telegram发表评论的请求。这两家通信应用程序公司的代表没有立即回复路透社的置评请求。国家互联网信息办公室也没有立即回复置评请求。</p><p>上述四款应用程序在中国都没有被广泛使用，腾讯的微信是目前在华最主要的通信服务应用。这些应用程序和许多外国应用程序在中国网络上通常被防火墙屏蔽，只能通过VPN或其他代理工具使用。</p><p>这四款应用程序在香港和澳门仍然可用。一些中国科技行业的专家说，政府对WhatsApp和Threads下达的命令可能与去年8月的一项新规定有关，该规定要求所有在中国上市的应用程序都必须向政府注册，否则将面临被下架的风险。公司完成注册的截止日期是3月底，该规定于4月1日生效。</p><p>苹果公司曾从中国应用商店下架过应用程序。2017年，苹果下架了《纽约时报》的新闻应用程序，称其违反了当地法规，此举正值世界第二大经济体新闻审查制度不断加强之际。该应用在苹果中国应用商店仍无法下载。去年，当中国政府正在制定有关人工智能生成服务的地方法规时，苹果下架了一些类似于ChatGPT的应用程序。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4u.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-%25E5%25BA%2594%25E7%25BD%2591%25E4%25BF%25A1%25E5%258A%259E%25E8%25A6%2581%25E6%25B1%2582-%25E8%258B%25B9%25E6%259E%259C%25E4%25BB%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%25BA%2594%25E7%2594%25A8%25E5%2595%2586%25E5%25BA%2597%25E4%25B8%258B%25E6%259E%25B6whatsapp%25E5%2592%258Cthreads&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82%20%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6WhatsApp%E5%92%8CThreads%20-%20https%3A%2F%2Frfi.my%2FAX4u.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82%20%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6WhatsApp%E5%92%8CThreads%20-%20https%3A%2F%2Frfi.my%2FAX4u.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4u.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82%20%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6WhatsApp%E5%92%8CThreads&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 18:13</div><img src="https://s.rfi.fr/media/display/ea51fe98-baae-11ee-8e54-005056a97e36/w:1280/p:16x9/%D0%92%D1%96%D1%86%D0%B5%D0%BF%D1%80%D0%B5%D0%B7%D0%B8%D0%B4%D0%B5%D0%BD%D1%82%20%D0%84%D0%B2%D1%80%D0%BE%D0%BA%D0%BE%D0%BC%D1%96%D1%81%D1%96%D1%97%20%D0%92%D0%B0%D0%BB%D0%B4%D1%96%D1%81%20%D0%94%D0%BE%D0%BC%D0%B1%D1%80%D0%BE%D0%B2%D1%81%D0%BA%D1%96%D1%81.%20%D0%91%D1%80%D1%8E%D1%81%D1%81%D0%B5%D0%BB%D1%8C%2C%2023%20%D1%81%D1%96%D1%87%D0%BD%D1%8F%2C%202024%20%C2%A9%20%20European%20Union.jpg"><p><strong>欧盟委员会副主席周四表示，欧盟看到有迹象表明中国正在向俄罗斯供应可用于制造武器的零部件，并担心如果西方的决心减弱，中国可能会有恃无恐地增加对俄罗斯的供应。        </strong></p><div><p>据路透4月18日华盛顿报道，欧盟委员会执行副主席东布罗夫斯基斯（Valdis Dombrovskis）表示，他与美国国会立法者会面时强调美国批准被拖延已久的援助乌克兰（法案）的重要性。</p><p>美国官员上周向记者们简要介绍了中国向俄罗斯提供的物资--包括无人机和导弹技术、卫星图像和机床，指出这些物资虽不足以达到提供致命武器援助的程度，但却有助于俄罗斯增强军力，支撑其长达两年的乌克兰战争。</p><p>欧盟委员会副主席东布罗夫斯基斯在美国国会外交关系委员会的一次活动上说，欧盟正与美国合作打击逃避对俄罗斯制裁的行为，但他没有透露细节。</p><p>他说，欧盟对中国在乌克兰问题上的行动表示担忧，尤其是最近有迹象表明中国正在向俄罗斯运送零部件。</p><p>他解释道，我们看到中国正在坐观成败，考虑如何利用这种情况为自己谋利。但不幸的是，最近我们也看到有迹象表明中国确实在向俄罗斯供应零部件和各种设备。”</p><p>他称，这些设备涉及军民两用物品，而非真正的武器，但这些行动表明，加强西方支持乌克兰的决心是多么重要。</p><p>中国大使馆发言人表示，中国不是乌克兰危机的一方，中俄之间的正常贸易不应受到干扰或限制。</p><p>美国国务卿安东尼-布林肯周五在G7外长会议上指责中国间接"助长"了在乌克兰的冲突。布林肯说：“中国如果一方面希望与欧洲和其他国家保持友好关系，就不能另一方面助长冷战结束以来对欧洲安全的最大威胁”。</p><p>在意大利卡普里岛举行的G7外长会议周五发布的公报称，他们对中国向俄罗斯转让材料帮助其在乌克兰的战争机器表示"强烈关切"。</p><p>美国国务院发言人本周表示，美国国务卿安东尼-布林肯预计在即将对中国进行的访问中提出类似的关切。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX2t.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E6%25AC%25A7%25E7%259B%259F%25E7%259C%258B%25E5%2588%25B0%25E4%25B8%25AD%25E5%259B%25BD%25E5%2590%2591%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E4%25BE%259B%25E5%25BA%2594%25E5%2586%259B%25E6%25B0%2591%25E4%25B8%25A4%25E7%2594%25A8%25E4%25BA%25A7%25E5%2593%2581%25E7%259A%2584%25E8%25BF%25B9%25E8%25B1%25A1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1%20-%20https%3A%2F%2Frfi.my%2FAX2t.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1%20-%20https%3A%2F%2Frfi.my%2FAX2t.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX2t.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
