--- a/articles/rfi/999993.md
+++ b/articles/rfi/999993.md
@@ -1,5 +1,5 @@
-<!--1713552301000-->
-[G7承诺“加强乌克兰的防空力量”](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-g7%E6%89%BF%E8%AF%BA-%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F)
+<!--1713552303000-->
+[以色列被指对伊朗发动攻击 伊朗中部听到剧烈爆炸声](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB-%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0)
 ------
 
-<div>19/04/2024 - 19:04</div><img src="https://s.rfi.fr/media/display/00846dda-fe3f-11ee-958f-005056a97e36/w:1280/p:16x9/G7%20ITALY%20APRIL%20A.jpg"><p><strong>七国集团（G7）外长周五表示，在俄罗斯袭击摧毁电力基础设施并造成数百人死亡之后，七国集团决心加强乌克兰的防空能力。        </strong></p><div><p>G7外长们表示，七国集团 "将加强乌克兰的防空能力，以拯救生命和保护重要基础设施"，并补充说他们将增加对基辅的防务和安全援助。</p><p>周五在意大利南部卡普里岛举行的为期三天的部长会议结束时发表了七国集团声明，会议期间讨论的主要问题包括乌克兰问题以及以色列和伊朗之间的军事对抗。据路透社报道，G7外长们补充说，"我们决心继续向乌克兰及其人民提供军事、财政、政治、人道主义、经济和发展支持"。</p><p>G7外长会议结束时，美国国务卿安东尼-布林肯表示，乌克兰急需额外资源，并警告北京，如果中国支持俄罗斯国防工业，将危及中国与欧洲的关系。</p><p>近几个月来，对乌克兰的军事援助已经放缓，欧洲合作伙伴明显缺乏武器弹药，而美国的重要资金在国会被共和党人卡住。</p><p>另一个关键问题是如何利用俄罗斯在西方持有的约3,000 亿美元主权资产的衍生利益来帮助乌克兰，而此时欧盟成员国正对此举的合法性举棋不定。</p><p>七国集团（G7）外长表示，他们将继续探讨如何利用被冻结的俄罗斯资产来帮助乌克兰。</p><p>北约秘书长延斯-斯托尔滕贝格（Jens Stoltenberg）周四在意大利卡普里小岛举行的七国集团外长会议间隙强调，乌克兰"迫切需要增加防空能力"。他向G7外长们说，由于俄罗斯对乌克兰城镇和基础设施的空袭，当地局势"困难重重"，因此"北约成员国保持并加强其支持至关重要"。</p><p>这位北约秘书长表示，他最近注意到北约成员国宣布提供军事援助的"令人鼓舞"的迹象，包括美国众议院预计周六投票通过向基辅提供 610 亿欧元援助的一揽子计划。</p><p>斯托尔滕贝格先生在乌克兰外交事务负责人库列巴（Dmytro Kouleba）应邀参加的乌克兰问题会议前补充道说："我们本应更早地给予他们更多"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX3Y.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-g7%25E6%2589%25BF%25E8%25AF%25BA-%25E5%258A%25A0%25E5%25BC%25BA%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E7%259A%2584%25E9%2598%25B2%25E7%25A9%25BA%25E5%258A%259B%25E9%2587%258F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=G7%E6%89%BF%E8%AF%BA%E2%80%9C%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAX3Y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=G7%E6%89%BF%E8%AF%BA%E2%80%9C%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAX3Y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX3Y.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=G7%E6%89%BF%E8%AF%BA%E2%80%9C%E5%8A%A0%E5%BC%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E9%98%B2%E7%A9%BA%E5%8A%9B%E9%87%8F%E2%80%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 10:18</div><img src="https://s.rfi.fr/media/display/97390bd4-fe0b-11ee-8376-005056bf30b7/w:1280/p:16x9/000_34PR6GE.jpg"><p><strong>伊朗中部周五凌晨听到剧烈爆炸声，以色列军方拒绝置评，美媒披露以色列向美国预告了这次袭击。        </strong></p><div><p>以色列周五夜间对伊朗发动了攻击。据德黑兰官方“法尔斯”通讯社报道，周五黎明时分，伊朗中部一个军事基地附近发生了三起爆炸事件。据伊朗国家电视台报道，中部伊斯法罕省听到了"巨大的爆炸声"，爆炸原因尚不清楚。</p><p>伊朗立即启动了多个省份的防空系统。伊朗当局表示，无人机已被击落，但"迄今为止 "没有发生导弹袭击。</p><p>不过，伊朗的“塔斯-尼姆”通讯社周五援引"消息灵通人士"说，在伊朗听到爆炸声后，"没有外国袭击的消息"。该通讯社称，"与以色列媒体的谣言和说法相反"，"没有任何关于外国对“伊斯法罕”中心城市或任何其他地区发动袭击的消息"。伊朗领导人尚未就爆炸事件公开发表评论。</p><p>据美国媒体报道，美国高级官员称，以色列对伊朗发动袭击是为了报复上周末以色列遭到的史无前例的无人机和导弹袭击。</p><p>白宫没有立即发表评论。但美国全国广播公司（NBC）和美国有线电视新闻网（CNN）分别援引熟悉此事的消息人士和一名美国官员的话报道说，以色列已提前向华盛顿发出了袭击警告，但美国没有同意这次行动，也没有参与实施。"据 CNN 报道，一名美国官员说："我们没有同意报复行动。</p><p>上周末，伊朗向以色列境内发射了数百枚导弹和无人机，以色列警告称将进行报复。在伊朗袭击上周末袭击以色列之前，伊朗驻大马士革领事馆遭袭击，德黑兰认为以色列负有责任。</p><p>以色列军方在周五早晨宣布，以色列北部已启动警报。</p><p>以色列军队发言人就爆炸事件告诉法新社记者："我们目前不予置评。</p><p>不过，以色列极右翼的国家安全部长本-格-维-尔（Ben Gvir）在 X 上发布一句话说"软弱！"</p><p>伊朗总统易卜拉欣-拉伊西（Ebrahim Raissi）本周曾表示，以色列对伊朗领土的任何攻击"都将遭到严厉回应"。</p><p>伊朗周四在联合国安理会表示，"必须迫使以色列停止针对我们利益的任何进一步军事冒险主义"，而联合国秘书长则警告说，中东正处于"最危险的时刻"。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWwW.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E8%25A2%25AB%25E6%258C%2587%25E5%25AF%25B9%25E4%25BC%258A%25E6%259C%2597%25E5%258F%2591%25E5%258A%25A8%25E6%2594%25BB%25E5%2587%25BB-%25E4%25BC%258A%25E6%259C%2597%25E4%25B8%25AD%25E9%2583%25A8%25E5%2590%25AC%25E5%2588%25B0%25E5%2589%25A7%25E7%2583%2588%25E7%2588%2586%25E7%2582%25B8%25E5%25A3%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB%20%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0%20-%20https%3A%2F%2Frfi.my%2FAWwW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB%20%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0%20-%20https%3A%2F%2Frfi.my%2FAWwW.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWwW.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AB%E6%8C%87%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%8F%91%E5%8A%A8%E6%94%BB%E5%87%BB%20%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E5%90%AC%E5%88%B0%E5%89%A7%E7%83%88%E7%88%86%E7%82%B8%E5%A3%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
