--- a/articles/rfi/999996.md
+++ b/articles/rfi/999996.md
@@ -1,5 +1,5 @@
-<!--1713545102000-->
-[在美国，“中国钢铁危害成了竞选的一个招式” - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240418-%E5%9C%A8%E7%BE%8E%E5%9B%BD%EF%BC%8C-%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%8D%B1%E5%AE%B3%E5%B7%B2%E6%88%90%E4%B8%BA%E7%AB%9E%E9%80%89%E7%9A%84%E4%B8%80%E4%B8%AA%E6%8B%9B%E5%BC%8F)
+<!--1713552301000-->
+[美众院即将投票对乌援助法案 五角大楼：有些军援几天内就能运抵乌克兰](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88-%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC-%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0)
 ------
 
-<div>19/04/2024 - 00:47</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>4月17日星期三，美国总统乔·拜登对中国钢铁倾销发起了攻击。法国《世界报》经济记者让·米歇尔·贝扎(Jean-Michel Bezat)在其专栏中写道，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。但是，和华盛顿向北京发起的芯片战争相比，“钢铁战争”根本算不了什么。                    </strong></p><div><p>周四法国世界报发表的一篇文章表示，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。</p><p>4月17日星期三，美国总统乔·拜登对中国钢铁倾销发起了攻击。顺便，拜登也对被唐纳德·特朗普的演讲给打动了的工人阶级发起了新的魅力攻势。法国《世界报》经济记者让·米歇尔·贝扎(Jean-Michel Bezat)在其专栏中写道，在美国，“自2016年以来，中国钢铁的危害已成为竞选的一个招式”。但是，和华盛顿向北京发起的芯片战争相比，“钢铁战争”根本算不了什么。</p><p>相关的文章写道，在20世纪70年代之前，宾夕法尼亚州的匹兹堡，是让美国国家工业变得伟大的一个地方，随后，却遭受了去工业化的蹂躏，可以说是美国“铁锈带”的核心。4月17日星期三，美国总统选择了匹兹堡这个“铁锈带”的核心地点，对中国钢铁倾销发起了攻击，同时，也对受到特朗普在美国总统选举的摇摆州所发表的演讲所迷惑的工人阶级，发起了新的魅力攻势。乔·拜登当天在钢铁工人工会的总部宣布，他希望对从中国进口的钢铁和铝所征收的税率是如今的三倍，目前的税率是7.5%。中国的钢铁产量占世界的近一半，存在巨大的产能过剩，中国钢铁基本产品的价格只有美国钢铁制造商的一半，以钢铁为基础的中国工业制品如汽车、风力涡轮机等充斥着市场。白宫坚称，这一切还对碳排放的减少，非常不利。</p><p>美国总统拜登在X社交网络上宣称：“我希望与中国竞争，而不是冲突。”拜登还向钢铁工人工会重申了他希望工会能够参与到捍卫“美国制造”的行动中去。同时，拜登还反对将美国钢铁公司出售给日本的新日铁公司，拜登表示，“一个多世纪以来”，美国钢铁公司都是一个“标志性公司”，它“必须继续是一个美国公司”。拜登还表示，像特朗普一样，他已经做好了准备，制止美国联邦外国投资委员会目前正在审查的这项售卖行动。</p><p><strong>持续性的、全方位施压</strong></p><p>法国世界报的文章表示，自2016年以来，中国钢铁的危害已成为了美国竞选活动中的一个招式。在拜登的作为总统候选人所发表的有关日本和中国的演讲中，不乏机会主义，甚至是厚颜无耻。诚然，新日铁是日本公司，但日本是美国坚定不移的盟友。至于中国的钢铁威胁，如果我们相信美国人口普查局的数据的话，那么，是不存在中国钢铁威胁的：因为，根据美国人口普查局的数据，美国进口的中国钢铁很少，只占其采购量的3%；美国钢铁协会的数据甚至显示，中国钢铁在美国钢铁采购中只占2.1%！</p><p>但是，华盛顿决定对中国施加永久性的、全方位的压力。与“芯片之战”相比，“钢铁之战”根本不算什么。华盛顿以国家安全的为名，正在尽一切努力、包括对其盟友施加压力，以便让北京没有可能来获得最新一代的电子芯片。</p><p>拜登指责习近平把先进的芯片用于“错误的地方”。习近平则认为，用的地方很对：是为了让中国在2050年成为世界领先的经济、科技和军事强国。</p><p>中国梦是美国的噩梦。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div>
+<div>19/04/2024 - 20:25</div><img src="https://s.rfi.fr/media/display/48c829c8-fe77-11ee-9ad8-005056a90284/w:1280/p:16x9/AP24109824140967.jpg"><p><strong>据两位美国官员透露，五角大楼正准备迅速批准一项对乌克兰的武器援助计划，其中包括急需的火炮和防空系统，此刻正值美国国会正在排队投票以通过对乌的额外军援拨款。        </strong></p><div><p>上述两位美国官员向政客新闻网表示，拜登政府尚未最终决定这批资金的规模和内容，他们因涉及敏感的内部讨论而被允许匿名。但其中一位官员说，五角大楼官员正在努力汇总一揽子美国装备，一旦立法通过并经总统签署，就能迅速通过官僚程序。该官员说：“他们将很快向（奥斯汀）防长提出建议，随后很快就会提交给总统”。</p><p>两位官员说，这笔资金将包括用于补充乌克兰武器库的火炮和防空系统，这将是美国自去年12月因国会对总统追加援助的要求停滞不前而耗尽资金以来的第二笔资金。白宫上个月批准了一项总额为3亿美元的对乌紧急援助计划，使用的是之前合同节省下来的成本。</p><p>第一位官员说，许多美国武器已经存放在欧洲各地的仓库中，可以立即运往乌克兰。有些物资几天内就能运抵乌克兰，有些则可能需要数周时间。</p><p>美国国防部发言人莱德（Patrick Ryder）少将拒绝透露即将到来的一揽子计划的具体内容，但在周四告诉记者，美国拥有“非常强大的物流网络，使我们能够非常迅速地运送物资”——可能在几天之内。莱德说，“我们当然理解并重视这种紧迫性，并已做好迅速行动的准备”。</p><p>美国众议院即将于周六就四项法案进行投票，这些法案将拨款950亿美元用于援助乌克兰、以色列和印太地区的合作伙伴。一旦获得通过，参议院还必须在拜登签署之前批准该援助方案。在用于乌克兰的近610亿美元中，约480亿美元将拨给五角大楼，用于武装基辅、补充武器和支付在欧洲的军事行动。该法案为美军提供了232亿美元，用于补充提供给乌克兰的武器装备库存。</p><p>另有138亿美元将用于“乌克兰安全援助计划”，供五角大楼为基辅购买新武器。还有113亿美元将用于加强在欧洲的美军行动。该立法重新授权五角大楼将价值78亿美元的现有武器从库存中运往乌克兰，然后由一揽子计划中增加的资金取代。</p><p>美国国防部负责国际安全事务的助理防长沃兰德（Celeste Wallander）最近告诉议员们，一旦国会最终批准援助，五角大楼将迅速开始运送弹药、炮弹和防空武器。</p><p>沃兰德对美国众议院军事委员会说：“在（美国欧洲司令部）和（美国运输司令部）的支持下，我们将能够在一两周内立即开始向乌克兰提供弹药、炮弹和拦截器”。</p><p>拜登政府多名高官本周强调，如果美国国会不通过额外拨款，乌克兰将很快陷入困境。美国中情局局长比尔·伯恩斯（Bill Burns）说，如果没有美国的新武器援助，乌克兰可能在今年年底前被击败。</p><p>美国国防部长奥斯汀（Lloyd Austin）则告诉议员们，在乌军苦于弹药短缺之际，俄军正在取得进展。奥斯汀指出：“我们已经看到战场上的局势开始向对俄罗斯有利的方向转变。我们看到他们正在逐步取得进展。我们看到乌克兰人在坚守阵地方面受到了挑战”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4K.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E7%25BE%258E%25E4%25BC%2597%25E9%2599%25A2%25E5%258D%25B3%25E5%25B0%2586%25E6%258A%2595%25E7%25A5%25A8%25E5%25AF%25B9%25E4%25B9%258C%25E6%258F%25B4%25E5%258A%25A9%25E6%25B3%2595%25E6%25A1%2588-%25E4%25BA%2594%25E8%25A7%2592%25E5%25A4%25A7%25E6%25A5%25BC-%25E6%259C%2589%25E4%25BA%259B%25E5%2586%259B%25E6%258F%25B4%25E5%2587%25A0%25E5%25A4%25A9%25E5%2586%2585%25E5%25B0%25B1%25E8%2583%25BD%25E8%25BF%2590%25E6%258A%25B5%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0%20-%20https%3A%2F%2Frfi.my%2FAX4K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0%20-%20https%3A%2F%2Frfi.my%2FAX4K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4K.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E4%BC%97%E9%99%A2%E5%8D%B3%E5%B0%86%E6%8A%95%E7%A5%A8%E5%AF%B9%E4%B9%8C%E6%8F%B4%E5%8A%A9%E6%B3%95%E6%A1%88%20%E4%BA%94%E8%A7%92%E5%A4%A7%E6%A5%BC%EF%BC%9A%E6%9C%89%E4%BA%9B%E5%86%9B%E6%8F%B4%E5%87%A0%E5%A4%A9%E5%86%85%E5%B0%B1%E8%83%BD%E8%BF%90%E6%8A%B5%E4%B9%8C%E5%85%8B%E5%85%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
