--- a/articles/rfi/999998.md
+++ b/articles/rfi/999998.md
@@ -1,5 +1,5 @@
-<!--1713543301000-->
-[伊朗中部传爆炸声  是以色列报复？看美联社如何分析](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240419-%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0-%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D-%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90)
+<!--1713545105000-->
+[副首相：英面临来自中、伊、俄、朝等敌对国家的诸多威胁](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E5%89%AF%E9%A6%96%E7%9B%B8-%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD-%E4%BC%8A-%E4%BF%84-%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81)
 ------
 
-<div>19/04/2024 - 15:21</div><img src="https://s.rfi.fr/media/display/d33d9a5e-1266-11ea-b20a-005056a99247/w:1280/p:16x9/2018-07-16t122734z_63342907_rc14637277c0_rtrmadp_3_iran-haj-khamenei.jpg"><p><strong>周五（4月19号）清晨，伊朗在发现无人机后向伊斯法罕附近的一个主要空军基地和一个核设施发射了防空系统，这些无人机被怀疑是以色列袭击的一部分，以报复德黑兰对该国前所未有的无人机和导弹袭击。但没有伊朗官员直接承认以色列发动袭击的可能性，以色列军方也没有回应置评请求。据报周五是伊朗最高领袖阿亚图拉-阿里-哈梅内伊85岁生日。        </strong></p><div><p>美联社海湾和伊朗新闻主任乔恩-甘布雷尔（Jon Gambrell）报道称："伊朗在该国中部地区发射了防空系统，这似乎是以色列对几天前德黑兰发动的袭击的某种回应。现在，我们所知道的还很零散。截至今天上午，伊朗已经停止了航班飞行，防空系统也已经启动，人们听到了伊斯法罕附近的爆炸声。伊斯法罕附近有一个大型空军基地，伊朗在那里拥有1979年伊斯兰革命前购买的F-14 "雄猫 "战斗机。这里还有一个重要的核设施。伊朗并没有说这是一次袭击。他们对此轻描淡写。他们今天在国家电视台上试图拿这件事开玩笑。但在此之前，德黑兰发动了一次袭击，向以色列发射了数百架无人机和导弹，而在此之前，以色列在叙利亚发动了另一次袭击，杀害了伊朗准军事革命卫队的成员。"</p><p>对于伊朗的低调，乔恩-甘布雷尔引述分析人士称，这可能是伊朗试图避嫌，避免局势升级的一次尝试。伊朗对以色列的袭击是史无前例的，而今天的袭击似乎没有造成任何严重破坏。但这确实表明以色列有能力向伊朗发射无人机，而且今天还是伊朗最高领袖阿亚图拉-阿里-哈梅内伊的85岁生日。因此，分析人士称，这可能是对伊朗的一个警告，即以色列仍有能力在未来发动袭击。</p><p>« 纽约时报》援引匿名以色列官员的话称，这次袭击发生在伊朗最高领袖阿亚图拉-阿里-哈梅内伊85岁生日之际。</p><p>上周六晚间，伊朗发射了数百架无人机、弹道导弹和巡航导弹，发动了前所未有的袭击，使中东更接近一场地区性战争。以色列军方发言人表示，发射次数超过 300 次，但其中 99% 被拦截。</p><p>美联社今天报道称，伊朗总统当天访问伊朗城市达姆甘时称，最近针对以色列的导弹和无人机袭击是伊朗“自豪和力量的源泉”。莱西说：“这次行动成为伊斯兰共和国及其武装部队力量的标志。它也显示了我们国家钢铁般的决心。”</p><p>莱西声称这次袭击是必要的，并团结了该国的政治派别。</p><p>法新社包袋，有媒体援引美国高级官员的话称，以色列周五的袭击是为了报复上周末针对以色列的史无前例的无人机和导弹袭击。然而，伊朗塔斯尼姆通讯社援引 "消息灵通人士 "的话说，"没有关于外国袭击的消息"。</p><p>一些国家和国际组织仍然谨慎地作出反应，呼吁保持克制。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX0l.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240419-%25E4%25BC%258A%25E6%259C%2597%25E4%25B8%25AD%25E9%2583%25A8%25E4%25BC%25A0%25E7%2588%2586%25E7%2582%25B8%25E5%25A3%25B0-%25E6%2598%25AF%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E6%258A%25A5%25E5%25A4%258D-%25E7%259C%258B%25E7%25BE%258E%25E8%2581%2594%25E7%25A4%25BE%25E5%25A6%2582%25E4%25BD%2595%25E5%2588%2586%25E6%259E%2590&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90%20-%20https%3A%2F%2Frfi.my%2FAX0l.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90%20-%20https%3A%2F%2Frfi.my%2FAX0l.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX0l.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E4%B8%AD%E9%83%A8%E4%BC%A0%E7%88%86%E7%82%B8%E5%A3%B0%20%20%E6%98%AF%E4%BB%A5%E8%89%B2%E5%88%97%E6%8A%A5%E5%A4%8D%EF%BC%9F%E7%9C%8B%E7%BE%8E%E8%81%94%E7%A4%BE%E5%A6%82%E4%BD%95%E5%88%86%E6%9E%90&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 22:54</div><img src="https://s.rfi.fr/media/display/d267f044-fdc5-11ee-addf-005056bfb2b6/w:1280/p:16x9/bfb16505dff5e264d5c04abde2a58861fef405e57c416b42c8f1f0c36b35894a.png"><p><strong></strong></p><div><p>就教育界，他特别表示，他希望大学副校长能够收到安全部门的简报，以便更好地“了解问题的严重程度”。</p><p>道登还希望就敏感领域的研究安全展开咨询，提高大学经费的透明度，并研究现有的国家安全和外国投资法律如何适用于教师。</p><p>另一方面，这位部长强调说，“新冠疫情和俄罗斯在乌克兰的战争暴露了全球供应链的相互关联性，以及在俄罗斯推高天然气价格和中国实施经济胁迫行为的情况下，这种相互关联性的程度”。</p><p>道登宣布，英国当局将审查当前对半导体等新兴或战略技术的出口管制。英国政府已利用《国家安全与投资（NSI）法案》阻止中国实体多次收购英国半导体制造商的尝试。</p><p>英国副首相奥利弗·道登（Oliver James Dowden）表示，“我们必须确保我们在国外销售的技术产品不会被用来损害我们的国家利益”。</p><p>他继续说道，“我们看到有人蓄意利用贸易限制作为胁迫武器”；而“中国针对立陶宛和俄罗斯针对厄瓜多尔的做法”就是实例。他还补充说，“我们还看到了公共部门采购构成国家安全风险的例子，从监控系统到电信基础设施”。</p><p>他坚称：“这就是为什么我禁止华为参与我们的 5G 网络，并禁止中国监控设备进入主要政府站点。”伦敦于 2020 年 7 月宣布将中国巨头华为排除在其 5G 网络之外，理由是该国存在安全风险。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWtB.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E5%2589%25AF%25E9%25A6%2596%25E7%259B%25B8-%25E8%258B%25B1%25E9%259D%25A2%25E4%25B8%25B4%25E6%259D%25A5%25E8%2587%25AA%25E4%25B8%25AD-%25E4%25BC%258A-%25E4%25BF%2584-%25E6%259C%259D%25E7%25AD%2589%25E6%2595%258C%25E5%25AF%25B9%25E5%259B%25BD%25E5%25AE%25B6%25E7%259A%2584%25E8%25AF%25B8%25E5%25A4%259A%25E5%25A8%2581%25E8%2583%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%89%AF%E9%A6%96%E7%9B%B8%EF%BC%9A%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD%E3%80%81%E4%BC%8A%E3%80%81%E4%BF%84%E3%80%81%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAWtB.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%89%AF%E9%A6%96%E7%9B%B8%EF%BC%9A%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD%E3%80%81%E4%BC%8A%E3%80%81%E4%BF%84%E3%80%81%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81%20-%20https%3A%2F%2Frfi.my%2FAWtB.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWtB.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%89%AF%E9%A6%96%E7%9B%B8%EF%BC%9A%E8%8B%B1%E9%9D%A2%E4%B8%B4%E6%9D%A5%E8%87%AA%E4%B8%AD%E3%80%81%E4%BC%8A%E3%80%81%E4%BF%84%E3%80%81%E6%9C%9D%E7%AD%89%E6%95%8C%E5%AF%B9%E5%9B%BD%E5%AE%B6%E7%9A%84%E8%AF%B8%E5%A4%9A%E5%A8%81%E8%83%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
