--- a/articles/rfi/999951.md
+++ b/articles/rfi/999951.md
@@ -1,5 +1,5 @@
-<!--1713712501000-->
-[中印角力背景下的马尔代夫立法选举 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240421-%E4%B8%AD%E5%8D%B0%E8%A7%92%E5%8A%9B%E8%83%8C%E6%99%AF%E4%B8%8B%E7%9A%84%E9%A9%AC%E5%B0%94%E4%BB%A3%E5%A4%AB%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE)
+<!--1713746703000-->
+[泽连斯基：&quot;乌克兰不会成为第二个阿富汗&quot; 乌军在克里米亚击中一艘俄罗斯舰艇](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240421-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA-%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97-%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87)
 ------
 
-<div>21/04/2024 - 13:16</div><img src="https://s.rfi.fr/media/display/a50fb70a-ff2b-11ee-b09e-005056bf30b7/w:1280/p:16x9/000_34PM4D8.jpg"><p><strong>印度洋岛国马尔代夫周日（4月21日）举行立法选举，在中国和印度在该地区大国角力背景下，选举被认为对亲中的总统穆罕默德 穆伊祖的一大考验，其政党在众院不占多数， 新近当选的穆伊祖正推进外交调整，舍弃传统捐助国印度，与中国走的更近。在大选前，这一调整尤其受到反对派的反对。                    </strong></p><div><p>法新社报导，马尔代夫拥有原始白色海滩和僻静度假村，以南亚最昂贵的度假胜地之一著称，而现在，这个位居东西国际航运干线上具有避略地位的印度洋岛国，已成为印度和中国地缘政治竞争的热点。</p><p>现年45岁的穆伊祖去年9月以亲中的前总统亚明（Abdulla Yameen）的代理人之姿赢得大选。就任后，他提出一项削弱印度战略影响力的计划，迫使新德里撤回部署在马尔代夫的89名驻军，这些印度驻军在此驾驶新德里赠送的三架侦察机，在马尔代夫的辽阔海上边界巡逻。穆伊祖目前要求全面印度驻军必须5月10日之前离开。</p><p>与此同时，穆伊祖正不断拉近与中国的关系，他在就任三个月后已在今年一月正式访问北京，在立法选举热闹进行之际，穆伊祖本月把几个备受关注的基础建设合约批给了中国的国有企业，在选举期间引发争议。</p><p>投票前夕，马尔代夫首都马累涌现出一大波代表反对党的黄色旗帜和身着黄色T恤人士的集会，反对党试图阻止总统寻求获得议会多数的努力，并遏制其施政及改变该国外交方向的企图。</p><p>马尔代夫选举组织人呼吁全国约28.5万选民及时投票。设在各群岛的投票陛周日全天开放九个半小时，选举结果预料会在隔天一早揭晓。</p><p>穆伊祖一位不愿透露姓名的助手告诉法新社说，"在各政党为周日选举进行的竞选活动中，地缘政治在很大程度上占据了重要位置。”他说，“总统就任时承诺要求印度军队撤离马尔代夫，他正为此努力”但“自他上台以来议会并没有与他合作"。</p><p>穆伊祖去年年底就任以来，国会已驳回了他提名的三个内阁任命，并否决了他的一些政府预算提案。</p><p>马尔代夫目前国会是由穆伊祖的前一任总统索里（Ibrahim Mohamed Solih）担任党魁的亲印度的“马尔代夫民主党”主导，该党一直在试图阻挡穆伊祖各项重新调整马尔地夫外交方向的举措。</p><p>观察指，包括穆伊祖所属“人民全国大会党”在内的大党均处分裂状态下，任何单一政党预料都难以在国会取得多数席次，因此有必要组成联盟。而马尔代夫法院此前裁定撤销穆伊祖的导师、前总统亚明的腐败和洗钱罪11年监禁判决，亚明已于周四刚刚获释，这个变化被认为应有助于加强穆伊祖的力量。</p><p>亚明承诺将继续开展反印运动，正是这场运动使他的盟友穆伊祖在去年九月的总统选举获胜。穆伊祖承诺的驱逐驻扎在马尔代夫的89名印度驻军行动已从今年3月启动，已有 25名印度士兵撤离。</p><p>对于与印度的关系，曾任马尔代夫上届政府国防部长的民主党人玛丽亚·迪迪向法广驻马尔代夫特约记者 Sébastien Farcis表示说，“ 印度是我们最近的邻国，在紧急情况下我们总是给他们打电话。对我们来说最大的安全威胁是自然灾害或石油泄漏，因为世界三分之一的石油出口经过马尔代夫。这样的事故会摧毁我们依赖鱼业和旅游业。在这种情况下，印度可以帮助我们。而中国距离很远。”</p><p>印度视马尔代夫群岛为其势力范围的一部分，但随着穆伊祖的当选，马尔代夫归入中国、这个其最大外国债权国的轨道。 据马尔代夫国防部称， 3 月该国与北京签署了一项旨在 "加强双边关系 "的 "军事援助 "协议。Farcis报道，在拉近与中国关系的同时，穆伊祖政府拒绝提与中国结盟，表示该国继续欢迎印度的投资及粮食援助。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9E%97%E5%85%B0/" title="林兰">林兰</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>21/04/2024 - 23:04</div><img src="https://s.rfi.fr/media/display/c78838b4-0022-11ef-82a5-005056bf30b7/w:1280/p:16x9/2024-04-03T120301Z_111254464_RC2YY6ARKUMI_RTRMADP_3_UKRAINE-CRISIS-FINLAND.JPG"><p><strong>在美国国会众议院通过对乌克兰新军事援助法案后，俄罗斯和乌克兰军队周日(4月21日）在重要城镇恰西夫亚尔（东部）附近发生激烈战斗；乌克兰宣称，乌军在克里米亚击中了一艘俄罗斯舰艇。乌克兰总统泽连斯基周日表示，美国新的援乌法案表明，乌克兰将不会成为第二个阿富汗。        </strong></p><div><p>法新社消息，俄罗斯国防部周日中午宣称，东部的博格达尼夫卡镇已“完全解放”，但乌克兰军队随后表示，俄军试图在空军的掩护配合下"改善战术局势"，但遭到乌克兰军队击退。</p><p>博格达尼夫卡是一个战前居民不足100人的小镇，距离俄罗斯军队的目标城镇恰西夫亚尔 (Chassiv Iar) 不到10公里。而恰西夫亚尔距离克拉马托尔斯克东南不到30公里，是顿涅茨克地区仍受乌克兰控制的主要城市，也是乌克兰军队重要的铁路和后勤枢纽。</p><p>另外，乌克兰周日宣称，乌克兰海军在克里米亚击中俄罗斯“科姆纳”号舰艇。负责公海救援（沉没潜艇或丢失货物）的科莫纳号是俄罗斯最老牌的军舰之一。</p><p>据多个军事网站称，“科姆纳”号于1915年下水，参加过两次世界大战，被认为是世界历史最久的仍可执行战斗任务的舰船。</p><p>乌克兰海军发言人普莱滕丘克表示，“科姆纳”号已经不再能执行任务。他说，“乌克兰还将继续进行打击行动，直到俄罗斯不再拥有船舰或离开吞并的克里米亚。</p><p>另据法新社消息，乌克兰总统泽连斯基周日接受美国全国广播公司频道采访，再次就美国众议院周六投票通过的美国对乌克兰援助计划表示，美国新的援乌法案表明，乌克兰将不会成为“第二个阿富汗”。</p><p>泽连斯基接受“会见新闻界”采访表示，“这项援助将增强乌克兰的实力，并向克里姆林宫发出强烈信号，表明乌克兰不会成为第二个阿富汗”。</p><p>泽连斯基称：“美国将与乌克兰站在一起，保护乌克兰人民并保护世界各地的民主。”</p><p>经过漫长而艰苦的谈判，美国众议院于周六通过了一揽子对外援助法案，其中包括向乌克兰提供610亿美元以协助乌克兰和地区合作伙伴对抗俄罗斯。</p><p>泽连斯基立即众院通过新的援乌法案表示欢迎称，"法案将阻止战争蔓延，拯救成千上万的生命，并将使我们两国变得更加强大。”</p><p>泽连斯基在周日的访谈还表示，乌克兰部分部队已经“精疲力竭”，需要更换。但新的部队必须拥有装备。他表示，希望尽快为前线的士兵提供具体帮助。</p><p>美国国会众院通过的法案还需要经参议院通过并得到美国总统拜登的批准，然后才能开始向乌克兰运送军援。</p><p>法新社援引美国战争研究所在最新公告中警告称，这意味着这种援助“几周内不会开始影响前线战局”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXKw.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240421-%25E6%25B3%25BD%25E8%25BF%259E%25E6%2596%25AF%25E5%259F%25BA-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E4%25B8%258D%25E4%25BC%259A%25E6%2588%2590%25E4%25B8%25BA%25E7%25AC%25AC%25E4%25BA%258C%25E4%25B8%25AA%25E9%2598%25BF%25E5%25AF%258C%25E6%25B1%2597-%25E4%25B9%258C%25E5%2586%259B%25E5%259C%25A8%25E5%2585%258B%25E9%2587%258C%25E7%25B1%25B3%25E4%25BA%259A%25E5%2587%25BB%25E4%25B8%25AD%25E4%25B8%2580%25E8%2589%2598%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E8%2588%25B0%25E8%2589%2587&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%22%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97%22%20%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87%20-%20https%3A%2F%2Frfi.my%2FAXKw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%22%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97%22%20%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87%20-%20https%3A%2F%2Frfi.my%2FAXKw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXKw.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%22%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97%22%20%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
