--- a/articles/rfi/999957.md
+++ b/articles/rfi/999957.md
@@ -1,5 +1,5 @@
-<!--1713667501000-->
-[美国会众议院压倒性通过TikTok剥离相关法案](https://www.rfi.fr/cn/%E6%94%BF%E6%B2%BB/20240420-%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87tiktok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88)
+<!--1713683707000-->
+[苹果在北京压力下下架Meta两款社交软件WhatsApp和Threads - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240420-%E8%8B%B9%E6%9E%9C%E5%9C%A8%E5%8C%97%E4%BA%AC%E5%8E%8B%E5%8A%9B%E4%B8%8B%E4%B8%8B%E6%9E%B6meta%E4%B8%A4%E6%AC%BE%E7%A4%BE%E4%BA%A4%E8%BD%AF%E4%BB%B6whatsapp%E5%92%8Cthreads)
 ------
 
-<div>20/04/2024 - 19:31</div><img src="https://s.rfi.fr/media/display/c0964f20-ff3a-11ee-b3ae-005056bf30b7/w:1280/p:16x9/Capture-2203.JPG"><p><strong>4月20日，美国国会众议院以360票对58票的两党投票结果通过了《21世纪以实力求和平法案》（H.R. 8038）。该法案包括多项国家安全优先事项，包括制裁伊朗、扣押被冻结的俄罗斯主权资产，以及一项可能导致在全美国范围内禁止使用TikTok的措施。该法案要求TikTok目前的中国所有者在一年内出售其股份，否则TikTok将面临禁令。其还将允许美国总统对俄罗斯和伊朗实施新的制裁。        </strong></p><div><p>美联社报导指，美国众议院共和党人此前决定将TikTok剥离问题作为一个更大的对外援助计划的一部分，这是拜登总统的优先事项，同时国会也广泛支持乌克兰和以色列等盟友。</p><p>由于民主党人和共和党人都对TikTok的所有者——字节跳动表示了国家安全方面的担忧，一项销售期限更短、为期六个月的独立法案在3月份以两党压倒性票数在美国众议院获得通过。</p><p>修改后的措施在周六以360票赞成、58票反对获得通过，经过谈判，美国参议院将把出售的期限延长至9个月，如果出售正在进行中，可再延长3个月。法律挑战可能会进一步延长这一期限。</p><p>这些修改似乎旨在消除一些参议员的顾虑，即原来的六个月出售期限可能太短。然而，这些修改是否足以获得参议院的批准仍是未知数，因为一些主要参议员已表示希望以更慢的速度通过TikTok剥离法案。</p><p>TikTok已表示，如果剥离法案得到通过，很可能会诉诸法庭，试图阻止法律的实施，并称这将剥夺TikTok在美国约1.7亿用户的宪法第一修正案权利。数月来，TikTok斥资极力游说反对相关立法，并推动该应用美国用户，其中许多是年轻人致电国会表示反对。但这种激烈的反击和干预激怒了国会山的立法者们，他们普遍担心北京对TikTok及其母公司的影响力，而很少有议员自己使用该平台。</p><p>TikTok发言人周六在一份声明中称：“不幸的是，众议院正以重要的对外和人道主义援助为幌子，再次强行通过一项禁令法案，该法案将践踏1.7亿美国人的言论自由权，摧毁700万家企业，并关闭一个每年为美国经济贡献240亿美元的平台”。</p><p>此外，该法案还包含美国众议院外交委员会主席麦考尔（Michael McCaul）所说的“国会多年来通过的最全面的制裁伊朗措施”。其将对接收与加工伊朗石油的港口和炼油厂实施制裁，并对参与去年失效的联合国对伊朗导弹禁运所涵盖的活动或参与伊朗导弹和无人机供应或销售的任何人实施制裁。该法案还将进一步限制向伊朗出口原产于美国的商品和技术。</p><p>与此同时，该法案还将授权行政当局扣押并向乌克兰转移在美国的被冻结的俄罗斯主权资产，以帮助乌克兰进行战斗和重建。美国众议院议长约翰逊（Mike Johnson）表示，他正考虑将这项名为《REPO法案》的措施作为对乌援助的一种方式。</p><p>拜登政府的高级官员也一直在与七国集团（G7）国家合作，探讨帮助乌克兰的新战略，这需要美国国会的批准。官员们告诉美国有线电视新闻网（CNN）称，被七国集团和欧盟冻结的俄罗斯央行资产绝大部分由欧盟持有，美国仅持有价值约50亿美元的资产。此外，该法案还将对哈马斯、巴勒斯坦伊斯兰圣战组织（杰哈德）和其他巴勒斯坦恐怖组织实施强制性制裁。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXCC.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%2594%25BF%25E6%25B2%25BB%2F20240420-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%259A%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E5%258E%258B%25E5%2580%2592%25E6%2580%25A7%25E9%2580%259A%25E8%25BF%2587tiktok%25E5%2589%25A5%25E7%25A6%25BB%25E7%259B%25B8%25E5%2585%25B3%25E6%25B3%2595%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87TikTok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCC.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87TikTok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCC.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXCC.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87TikTok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 12:23</div><img src="https://s.rfi.fr/media/display/de712a84-105a-11ea-a2a3-005056bff430/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>周六（4月20日）法国主要报纸有关中国的报道主要集中于经济和社会，在北京的压力下，苹果清理在中国的应用程序虚拟商店App Store，删除了Meta旗下社交软件WhatsApp和Threads。权威《世界报》和经济性《回声报》都对此给与报道。                    </strong></p><div><p>WhatsApp是拥有30亿用户的世界领先通讯工具，但几天来，它已在中国无法下载，苹果公司周五证实，已从中国的虚拟苹果商店中删除该应有程序，其他已经消失的应用还有同属Meta的社交软件 Threads、以及Telegram 和 Signal。</p><p>报道指，此举尽管对Meta的经济影响微乎其微，因为在中国，WhatsApp的主要用户是一些外籍人士、留学生及外国游客，而所有的中国人使用的都是微信这一日常生活必不可少的超级应用，WhatsApp此前已被北京封锁多年，通常只能通过付费VPN翻墙软件才能访问和断续使用。</p><p>《世界报》写道，中国密切监控媒体和互联网，对其有严格的监管和审查，杜绝如何对国家政策可能有负面影响或造成动荡的内容。谷歌、油管等许多外国网站、应用程序和X、Instagram、Facebook等社交网络只有通过VPN才能使用。</p><p>现在，WhatsApp在中国将不再能下载。报道指，中国似乎希望对应用程序给与更多地控制，而此时这样做的矛盾之处是，中国正在恢复与外部世界的外交、文化和人文交流，并试图安抚外国企业来华投资以重振本国经济。此外，该措施也证实了苹果在中国的困难，以及该品牌在中国长期以来的所具有的标志性地位，相对于当局而言，该品牌可能的议价能力越来越弱。</p><p>根据苹果公司表示，正是中国国家网信办，出于“国家安全”的原因“命令”其删除这些应用程序。简言之，可能是苹果或Meta拒绝遵守一项新规定：自4月1日起，中国所有应用程序都必须在工信部正式“注册”，否则将停止在中国运营。据一直在分析该法规的律师事务所Dezan Shira称，该措施自2000年以来一直针对于网站实施，用以打击网络欺诈。微信上的“小应用”也受到影响。但为获得通过，应用程序必须提供潜在的敏感技术信息，例如服务器位置、IP 地址等。</p><p>这是否触及苹果的红线？苹果在一份声明中说，“我们有义务尊重我们经营所在国家的法律，即使我们并不同意”。据路透社报道，为什么苹果只删除了WhatsApp，而其他Meta应用程序，如Facebook、Instagram或Messenger等周五仍然可以下载，对此还有待观察，苹果和Meta目前没有给与置评。</p><p>无论如何这并不是首次外国应用程序被中国屏蔽，《回声报》提到2021 年，当北京接管火爆的私人在线辅导行业时，语言学习软件Duolingo在中国的应用商店中就被下架了近一年。2017 年，苹果也在其中国应用商店中删除《纽约时报》的应用程序今。</p><p>《回声报》指，苹果下架两款Meta应用是在该集团首席执行官库克于3月下旬访问中国之后。苹果在中国这一其全球第三大市场正面临困境：消费减弱，数百万公务员不再能公开购买iPhone，而来自中国品牌的本地竞争日益激烈。为重夺优势，最近苹果决定在上海开设第8家苹果店。目前上海的苹果店数量甚至已超过纽约。</p><p><strong>北京半程马拉松赛“放水”争议 何杰和三名外籍选手被取消成绩</strong></p><p>上周日北京半程马拉松比赛中国选手何杰夺冠争议是费加罗有关中国报道的另一话题，组织者周五宣布取消何杰和协助其夺冠的其他三名肯尼亚及埃塞俄比亚选手的获奖资格。比赛视频被网络疯传引发巨大争议，促使组织方在赛后展开调查。</p><p>画面中2023年亚运会马拉松金牌得主、中国运动员何杰在接近终点时一度被三名外籍选手超越，但后者随后似乎放慢速度，并示意何杰加速，这一画面令人惊讶。三名外籍选手之一的姆南加特之后告诉BBC说，他们三人是作为“野兔”参加，即只是负责带跑，但比赛中他们确是佩戴着参赛号码布参加了比赛。组委会在央视援引的声明中说，，三名外籍选手确实是配速员，但负责比赛的合作公司并未这样宣布而实际作为选手参赛。最终何杰和三名外籍选手被宣布取消比赛成绩。组委会对没有及时“发现并纠正”问题表示道歉。</p><p>此次争议引发了中国网络的巨大震撼，一位微博网民说，“体育精神被毁，这是一种耻辱”。报道回顾近年来多项中国体育赛事饱受争议。包括2019年徐州国际马拉松赛的一名参赛者被发现在比赛时骑自行车代跑，以及中国一支定向运动队因在军运会上“作弊”被取消参赛资格。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9E%97%E5%85%B0/" title="林兰">林兰</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
