--- a/articles/rfi/999964.md
+++ b/articles/rfi/999964.md
@@ -1,5 +1,5 @@
-<!--1713651301000-->
-[内塔尼亚胡:美国对以色列的援助“捍卫了西方文明”](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240420-%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1-%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9-%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E)
+<!--1713656702000-->
+[布林肯下周访华将面告中国不要向俄出口武器](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240420-%E5%B8%83%E6%9E%97%E8%82%AF%E4%B8%8B%E5%91%A8%E8%AE%BF%E5%8D%8E%E5%B0%86%E9%9D%A2%E5%91%8A%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%A6%81%E5%90%91%E4%BF%84%E5%87%BA%E5%8F%A3%E6%AD%A6%E5%99%A8)
 ------
 
-<div>20/04/2024 - 23:23</div><img src="https://s.rfi.fr/media/display/c626eb40-f024-11ee-b825-005056bf30b7/w:1280/p:16x9/2024-03-31T135038Z_1609163870_RC2WC5A0S4MC_RTRMADP_3_ISRAEL-POLITICS-NETANYAHU.JPG"><p><strong>在以色列与巴勒斯坦哈马斯战争持续并与伊朗紧张加剧的背景下，美国众议院周六(4月20日）通过对乌克兰、以色列和台湾950亿美元庞大对外援助法案，其中包括向以色列提供264亿美元新的军事援助。以色列总理内塔尼亚胡称，新军事援助是“捍卫了西方文明”。        </strong></p><div><p>法新社报道，美国国会众院周六以366票对58票通过"以色列安全补充法案"（Israel Security Supplemental bill），以向以色列提供264亿美元援助。</p><p>以色列总理内塔尼亚胡立即对此表示欢迎。内塔尼亚胡在X上写道：“美国国会刚刚以压倒性多数通过了一项广受欢迎的援助法案，该法案表明了两党对以色列的强有力支持并捍卫了西方文明。”</p><p>以色列外长卡茨也对美国众议院的投票表示欢迎，卡茨在他的X账户上表示，这次投票“证明了以色列和美国之间的密切关系和战略伙伴关系，并向我们的敌人发出了强烈的信息”。</p><p>法新社称，在以色列周五向伊朗发起报复性袭击后，伊朗和以色列似乎正在摆脱可能的紧张升级，德黑兰则是淡化了以色列袭击的程度范围。伊朗中部伊斯法罕地区的一个军事基地附近周五凌晨传出爆炸，美国媒体援引美国官员的话称，这是以色列针对4月13日伊朗对以色列发动无人机和导弹袭击而采取的行动。 以色列此前誓言要让伊朗为袭击以色列付出代价。</p><p>与此同时，以色列军队对被围困的加沙地带发动了数十次袭击，据民防部门称，其中一次袭击导致该地区南部拉法同一家庭的九名成员死亡，其中包括儿童。</p><p>另据巴勒斯坦卫生部门周六表示，以色列军队自进入约旦河西岸城市图勒凯尔姆开展军事行动以来，已造成至少13名巴勒斯坦人死亡。</p><p>巴勒斯坦表示，以军部分撤离图勒凯尔姆后，救援人员进入冲突现场，发现死者遗体。</p><p>巴勒斯坦传媒报道，以巴在图勒凯尔姆冲突期间，以军阻止救援人员进入现场救治。以色列传媒表示，行动期间，以军多次遭到巴人武装伏击，至少有9名以军士兵受伤。</p><p>另据报道，土耳其外长菲丹周六与埃及外长舒凯里在土耳其伊斯坦布尔会晤，讨论巴以冲突、伊朗和以色列的对抗、加沙地带的人道主义局势以及双边关系等问题。</p><p>菲丹会晤后表示，巴以冲突导致全球物流链受冲击，物价飞涨，为防止外溢效应引发全球性经济危机，必须果断采取措施，从根本上解决问题。他并表示，当务之急是实现两国方案。</p><p>舒凯里表示，巴以冲突有可能蔓延，伊以对抗局势已加剧，埃及方面呼吁各方保持克制，冲突、互不理解和暴力应马上停止。他称，伊以对抗转移了国际社会对加沙地带局势的关注。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXDT.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240420-%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AF%25B9%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E7%259A%2584%25E6%258F%25B4%25E5%258A%25A9-%25E6%258D%258D%25E5%258D%25AB%25E4%25BA%2586%25E8%25A5%25BF%25E6%2596%25B9%25E6%2596%2587%25E6%2598%258E&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%3A%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9%E2%80%9C%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAXDT.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%3A%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9%E2%80%9C%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAXDT.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXDT.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%3A%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9%E2%80%9C%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E%E2%80%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 23:20</div><img src="https://s.rfi.fr/media/display/d04b83f6-ff5b-11ee-8036-005056bfb2b6/w:1280/p:16x9/2024-04-19T092952Z_874730840_RC2I97AOU4FS_RTRMADP_3_G7-ITALY-FOREIGN.JPG"><p><strong>美国国务卿布林肯将于4月24至26日访问中国。布林肯此行旨在向北京施压，要求其减少对俄罗斯军事及国防产业的支持。布林肯还将谈及南海、台海局势、中国不公平贸易及打击芬太尼等。美方官员简报此行时提到，在台湾总统就职前的敏感时期，希望所有国家避免采取使局势升级的挑衅行动。        </strong></p><div><p>法新社报道，这是布林肯一年之内第二次出访北京，也标志着美中之间的摩擦，相较于前总统特朗普时期进一步减少。特朗普在竞选期间承诺，如果赢得11月的总统大选，他将对北京采取强硬政策。而现任总统拜登则是寻求维持世界最大两个经济体之间更大稳定的同时，继续向北京施加压力。</p><p>在布林肯访华之前，拜登与美国在亚洲的两个盟友日本和菲律宾领导人举行首次三边峰会，向在印太地区不断扩张的中国发出强烈信号；与此同时，拜登政府计划大幅提高中国钢铁关税。</p><p>一位美国高层官员向媒体表示，“我们的情况与一年前有所不同，当时美中双边关系处于历史低点”。这位没有透露姓名的官员称，“我们的目标是在稳定(美中）双边关系的同时，加强(与盟友间的）联盟、积极竞争并捍卫我们利益”。</p><p>据称，布林肯将特别提出北京对影响乌克兰战场局势的俄罗斯国防工业的支持。虽然中国没有向俄罗斯直接提供军事援助，但美国指责中国向俄罗斯转让用于生产对乌克兰战争的弹药和武器的军民两用材料。布林肯在周五意大利举行的新闻发布会上指责北京"间接"助长乌克兰冲突称：“中国既希望与欧洲及其他国家保持友好关系，就不能助长冷战结束以来对欧洲安全面临的最大威胁”。</p><p>美国国务院高阶官员日前举行电话背景简报时表示，布林肯此行除了前往北京，还将中途停留上海。官员指出，布林肯一行人包括刚从中国返美、主管亚太事务的助卿康达（Daniel Kritenbrink）、国际毒品暨执法事务助卿罗宾逊（Todd Robinson）、负责网络空间和数位政策的费克（Nathaniel Fick）以及公共外交及公共事务次卿艾伦（Elizabeth Allen）。</p><p>美中关系或许从谷底反弹，但是布林肯再次踏上中国，也逢多事之秋：美国刚启动对中国的海运、物流和造船业的301条款调查；美国会举证，指中国仍补贴芬太尼生产出口，及美国官员多次正告中国不要支持俄罗斯国防业。</p><p>这名官员表示，布林肯此行目标有3：在关键议题上取得进展、明确且直接地传达对区域及全球议题的关切，及负责任地管理竞争，以免造成误判或冲突。官员也预告，可预期双边在未来几周、几个月将进行更多高阶外交接触及互动。</p><p>他指出，布林肯除了延续拜习会的承诺，推进禁毒合作及强化两军沟通等外，布林肯将明确且坦率地提出美国对人权、不公平经济及贸易行为、中国工业产能过剩、中国支持俄罗斯国防业等问题的关切。</p><p>他称，"国务卿还将讨论印太区域的挑战，包括中国在南海挑衅、朝鲜威胁言论及鲁莽行动、缅甸危机及重申台海和平与稳定的重要性"。</p><p>另据中央社报道，在官员回应布林肯是否将要求中国在台湾总统就职典礼前后，维持台海稳定时表示，布林肯将在公开及私下场合强调，美国对于维持台海和平与稳定有着持久的利益，美国认为这对于该区域及世界至关重要。</p><p>他说，在台湾新任总统就职典礼前夕的这重要且敏感时期，"我们期待所有国家都能为和平与稳定做出贡献，避免采取可能升高紧张局势的挑衅行动，并展示克制。这将是我们今后要传达的讯息。"</p><p>打击在美国引发成千上万人死亡的芬太尼（fentanyl）氾滥方面，官员说，布林肯视芬太尼为美中最重要的议题之一。芬太尼是18岁到49岁美国人最主要的死因，此行重点在于确保双边落实拜习会的相关协议，在执法机构方面，更是如此。</p><p>记者询问美国国务院短期内是否有意降低对中国的第3级旅游警示，官员指出，美国尽一切可能确保海外公民的安全。当前针对中国的旅游警示是基于中国若干国安法的不透明性及美国公民遭关押等情形所引发的疑虑，相信布林肯访中期间将再次提出这些问题。</p><p>他说，美方将在适当的情况下重新评估旅游示警等级，"但实际上，这是非常严格的过程。"</p><p>中国"对外关系法"及修订版"反间谍法"去年7月上路后，美国国务院发出第3级旅游警示（Reconsider travel，仅次于最高级的"请勿前往"，Do Not Travel），建议公民"重新考虑是否前往中国旅行，以避免中国当局任意执法、禁止出境以及错误拘留的风险。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXDQ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240420-%25E5%25B8%2583%25E6%259E%2597%25E8%2582%25AF%25E4%25B8%258B%25E5%2591%25A8%25E8%25AE%25BF%25E5%258D%258E%25E5%25B0%2586%25E9%259D%25A2%25E5%2591%258A%25E4%25B8%25AD%25E5%259B%25BD%25E4%25B8%258D%25E8%25A6%2581%25E5%2590%2591%25E4%25BF%2584%25E5%2587%25BA%25E5%258F%25A3%25E6%25AD%25A6%25E5%2599%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B8%83%E6%9E%97%E8%82%AF%E4%B8%8B%E5%91%A8%E8%AE%BF%E5%8D%8E%E5%B0%86%E9%9D%A2%E5%91%8A%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%A6%81%E5%90%91%E4%BF%84%E5%87%BA%E5%8F%A3%E6%AD%A6%E5%99%A8%20-%20https%3A%2F%2Frfi.my%2FAXDQ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B8%83%E6%9E%97%E8%82%AF%E4%B8%8B%E5%91%A8%E8%AE%BF%E5%8D%8E%E5%B0%86%E9%9D%A2%E5%91%8A%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%A6%81%E5%90%91%E4%BF%84%E5%87%BA%E5%8F%A3%E6%AD%A6%E5%99%A8%20-%20https%3A%2F%2Frfi.my%2FAXDQ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXDQ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B8%83%E6%9E%97%E8%82%AF%E4%B8%8B%E5%91%A8%E8%AE%BF%E5%8D%8E%E5%B0%86%E9%9D%A2%E5%91%8A%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%A6%81%E5%90%91%E4%BF%84%E5%87%BA%E5%8F%A3%E6%AD%A6%E5%99%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
