--- a/articles/rfi/999965.md
+++ b/articles/rfi/999965.md
@@ -1,5 +1,5 @@
-<!--1713640502000-->
-[台湾宣布在本岛周边发现21架中国军机](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240420-%E5%8F%B0%E6%B9%BE%E5%AE%A3%E5%B8%83%E5%9C%A8%E6%9C%AC%E5%B2%9B%E5%91%A8%E8%BE%B9%E5%8F%91%E7%8E%B021%E6%9E%B6%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA)
+<!--1713656702000-->
+[联合国在刚果(金)南基伍撤兵](https://www.rfi.fr/cn/%E9%9D%9E%E6%B4%B2/20240420-rfi-%E6%B3%95%E5%B9%BF-%E5%B0%BC%E5%8F%A4%E6%8B%89-%E9%9D%9E%E6%B4%B2-%E8%81%94%E5%90%88%E5%9B%BD%E5%9C%A8%E5%88%9A%E6%9E%9C-%E9%87%91-%E5%8D%97%E5%9F%BA%E4%BC%8D%E6%92%A4%E5%85%B5)
 ------
 
-<div>20/04/2024 - 09:35</div><img src="https://s.rfi.fr/media/display/800b6492-fee8-11ee-ad65-005056bfb2b6/w:1280/p:16x9/%E5%8F%B0%E6%B5%B7%E5%86%9B%E6%9C%BA.JPG"><p><strong>台湾国防部周六4月20日宣布，自当地时间8时15分（格林尼治标准时间0时15分）以来，在台湾岛周围已发现21架中国军机，此时距离当选总统赖清德的就职典礼还有一个月的时间。        </strong></p><div><p>法新社台北报道，台湾国防部在一份声明中说，"21 架飞机中有17 架越过了台湾海峡的中线"，台湾武装部队"正在使用监视系统观察这些活动，并已部署适当手段做出相应反应"。</p><p>该报道说，中线是中国和台湾之间的非官方分界线，但中国不承认。台湾是一个自治岛屿，北京声称是其领土的一部分，并希望有一天能够夺取台湾，必要时可以使用武力。</p><p>中国飞机入侵事件的激增是专家们所说的"灰色地带"战略的一部分，即没有采取实际战争行动的恐吓行动。</p><p>自 2016 年蔡英文当选台湾总统以来，中国这些行动愈演愈烈。蔡英文认为台湾事实上"已经独立"，而这是北京的红线。</p><p>蔡英文女士将于 5 月 20 日把她的职位移交给台湾现任副总统赖清德，赖清德和蔡女士一样都是民进党（PDP）党员。</p><p>作为1月13日总统选举的获胜者，赖清德也支持对北京采取强硬路线。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX7s.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240420-%25E5%258F%25B0%25E6%25B9%25BE%25E5%25AE%25A3%25E5%25B8%2583%25E5%259C%25A8%25E6%259C%25AC%25E5%25B2%259B%25E5%2591%25A8%25E8%25BE%25B9%25E5%258F%2591%25E7%258E%25B021%25E6%259E%25B6%25E4%25B8%25AD%25E5%259B%25BD%25E5%2586%259B%25E6%259C%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8F%B0%E6%B9%BE%E5%AE%A3%E5%B8%83%E5%9C%A8%E6%9C%AC%E5%B2%9B%E5%91%A8%E8%BE%B9%E5%8F%91%E7%8E%B021%E6%9E%B6%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAX7s.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8F%B0%E6%B9%BE%E5%AE%A3%E5%B8%83%E5%9C%A8%E6%9C%AC%E5%B2%9B%E5%91%A8%E8%BE%B9%E5%8F%91%E7%8E%B021%E6%9E%B6%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAX7s.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX7s.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8F%B0%E6%B9%BE%E5%AE%A3%E5%B8%83%E5%9C%A8%E6%9C%AC%E5%B2%9B%E5%91%A8%E8%BE%B9%E5%8F%91%E7%8E%B021%E6%9E%B6%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 23:09</div><img src="https://s.rfi.fr/media/display/2dfd7f30-1632-11ea-ac30-005056a99247/w:1280/p:16x9/RDC-Helicopt%C3%A8re-Monusco_2_0.jpg"><p><strong>在非洲刚果民主共和国（RD Congo）的东部地区，联合国维和部队-驻刚果（金）稳定特派团（Monusco）的撤兵行动正在进行之中。在南基伍省的卡莱赫（Kalehe）地区，巴基斯坦蓝盔兵已于昨天周五（2024年04月19日）把他们的营地移交给了刚果（金）的军事力量。本台法广（RFI）特派记者当天现场见证了官方组织的移交仪式。南基伍省的军政高层和妇女领袖都对联合国维和部队军人们的付出给予了正面的肯定，并表示谢意。        </strong></p><div><p>本台法广（RFI）法文网今天（2024年04月20日）星期六有关非洲的最新报导之一是联合国维和部队正在紧锣密鼓地从刚果民主共和国撤兵。现在距离近期目标，即在四月底之前撤出该国的南基伍省还有10天。最终目标则是要在今年（2024年）结束从刚果（金）撤出的任务。</p><p><strong>-- 巴基斯坦蓝盔兵得到南基伍民众的肯定 -</strong></p><p>据本台法广（RFI）法文网报导，在南基伍省的联合国驻刚果（金）稳定特派团（Monusco）现已关闭了位于瓦伦古（Walungu）地区的Kamanyola基地，和位于卡巴雷（Kabare）地区的Amsar营地。04月19日周五巴基斯坦蓝盔兵移交的Bunyakiri营地位于卡莱赫（Kalehe）地区。当地位于南基伍省省城布卡武（Bukavu）以北80公里。联合国维和部队的这个营地紧邻Kahuzi Biega国家公园。巴基斯坦蓝盔兵自2004年起，在当地已经驻扎了20年之久。</p><a href="https://www.rfi.fr/fr/afrique/20240419-rdc-la-monusco-se-retire-de-sa-base-de-bunyakiri-au-sud-kivu"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/d43b1974-0d55-11ea-bec1-005056a9aa4d/2017-09-30t175913z_1849764507_rc19a77bd740_rtrmadp_3_congo-rebels.webp 2480w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/d43b1974-0d55-11ea-bec1-005056a9aa4d/2017-09-30t175913z_1849764507_rc19a77bd740_rtrmadp_3_congo-rebels.jpg" alt="Peacekeepers serving in the United Nations Organization Stabilization Mission in the Democratic Republic of the Congo (MONUSCO) from Pakistan patrol the streets of Uvira, South Kivu, in the Democratic" srcset="https://s.rfi.fr/media/display/d43b1974-0d55-11ea-bec1-005056a9aa4d/2017-09-30t175913z_1849764507_rc19a77bd740_rtrmadp_3_congo-rebels.jpg 2480w"sizes=""width="2480"height="1620"loading="lazy"></picture><figcaption><span>存档图片 / 刚果（金）的巴基斯坦蓝盔兵。Image Archive / RD Congo ：des contingents pakistanais de la Monusco.</span>                <span>REUTERS - Crispin Kyala / RFI Archive</span>            </figcaption></figure></a><p>本台法广（RFI）特派记者威廉（William Basimike）周五出席了巴基斯坦蓝盔兵向刚果（金）军事力量移交营地的仪式。在现场，Bunyakiri的一位妇女领袖Maliyabo Munganga感谢巴基斯坦维和军人们的付出。这位女性领袖对齐塞克迪总统（Président Félix Tshisekedi）直言道，他们（巴基斯坦军人们）稳住了安全局势，因为，自从他们到来之后，强奸案减少了。</p><p><strong>-- 南基伍省军政当局感谢巴基斯坦蓝盔兵 -</strong></p><p>南基伍省的Bunyakiri营地最初，只是一个不固定的行动基地。2016年才成为了一个固定营地。这里部署了80名维和士兵，负责保护周边1万多居民。负责支援联合国行动的负责人Ebrima Ceesay重申，联合国没有放弃刚果（金）。他说：“在驻刚果（金）稳定特派团（Monusco）撤出后，联合国的机构、基金和项目将继续遵照授权予以提供支持。但安全与民防的责任则属于刚果（金）政府。</p><a href="https://www.rfi.fr/fr/tag/rdc/"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/d10054ee-151c-11ea-867b-005056a99247/LA-PHOTO-DU-MARDI-03-NOVEMBRE-2015_0.webp 600w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/d10054ee-151c-11ea-867b-005056a99247/LA-PHOTO-DU-MARDI-03-NOVEMBRE-2015_0.jpg" alt="Les tireurs isolés suivent régulièrement des formations pratiques et font plusieurs exercices sur les champs de tir." srcset="https://s.rfi.fr/media/display/d10054ee-151c-11ea-867b-005056a99247/LA-PHOTO-DU-MARDI-03-NOVEMBRE-2015_0.jpg 600w"sizes=""width="600"height="400"loading="lazy"></picture><figcaption><span>存档图片 / 刚果（金）：南基伍省Bunyakiri的军事训练。Image Archive / RD Congo : MONUSCO - un tireur embusqué lors d’une formation dans le territoire de Bunyakiri. （illustration)</span>                <span>MONUSCO - Sajjad Khan / RFI Archive</span>            </figcaption></figure></a><p>刚果（金）南基伍省副省长Marc Malago，还有在南基伍省的军方后勤与行政副指挥Gr. Mabosso Jean-Ladis将军也都称赞巴基斯坦维和军人们得以重筑和平。他们还承诺，<a href="https://www.rfi.fr/tw/關鍵詞/剛果-金/" target="_self">刚果（金）</a>政府将肩负起保障人民安全的职责。</p><a href="https://www.rfi.fr/tw/%E9%97%9C%E9%8D%B5%E8%A9%9E/%E5%89%9B%E6%9E%9C-%E9%87%91/"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/6a340b4c-1563-11ea-a62c-005056a99247/REP-DEM-CONGO-344-sud-kivu_1_0.webp 344w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/6a340b4c-1563-11ea-a62c-005056a99247/REP-DEM-CONGO-344-sud-kivu_1_0.gif" alt="存档地图 / 刚果（金）南基伍省及其省城布卡武（Bukavu）。RFI Carte Archive / RD Congo : le Sud-Kivu est une province de la république démocratique du Congo. Elle voisine le Rwanda, le Burundi et la Tanzanie. Ici, la province Sud-Kivu." srcset="https://s.rfi.fr/media/display/6a340b4c-1563-11ea-a62c-005056a99247/REP-DEM-CONGO-344-sud-kivu_1_0.gif 344w"sizes=""width="344"height="257"loading="lazy"></picture><figcaption><span>存档地图 / 刚果（金）南基伍省及其省城布卡武（Bukavu）。RFI Carte Archive / RD Congo : le Sud-Kivu est une province de la république démocratique du Congo. Elle voisine le Rwanda, le Burundi et la Tanzanie. Ici, la province Sud-Kivu.</span>                <span>©Latifa Mouaoued/RFI</span>            </figcaption></figure></a><p>（ 翻译和编辑：法广 <strong><a href="https://www.rfi.fr/fr/" target="_self">RFI</a> </strong>电台 <strong><a href="https://www.rfi.fr/tw/作者/尼古拉/" target="_self">尼古拉</a> </strong>）</p><p>~. <strong><a href="https://www.rfi.fr/cn/作者/尼古拉/" target="_self">Fin</a></strong> .~</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXDF.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%259D%259E%25E6%25B4%25B2%2F20240420-rfi-%25E6%25B3%2595%25E5%25B9%25BF-%25E5%25B0%25BC%25E5%258F%25A4%25E6%258B%2589-%25E9%259D%259E%25E6%25B4%25B2-%25E8%2581%2594%25E5%2590%2588%25E5%259B%25BD%25E5%259C%25A8%25E5%2588%259A%25E6%259E%259C-%25E9%2587%2591-%25E5%258D%2597%25E5%259F%25BA%25E4%25BC%258D%25E6%2592%25A4%25E5%2585%25B5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%81%94%E5%90%88%E5%9B%BD%E5%9C%A8%E5%88%9A%E6%9E%9C%28%E9%87%91%29%E5%8D%97%E5%9F%BA%E4%BC%8D%E6%92%A4%E5%85%B5%20-%20https%3A%2F%2Frfi.my%2FAXDF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%81%94%E5%90%88%E5%9B%BD%E5%9C%A8%E5%88%9A%E6%9E%9C%28%E9%87%91%29%E5%8D%97%E5%9F%BA%E4%BC%8D%E6%92%A4%E5%85%B5%20-%20https%3A%2F%2Frfi.my%2FAXDF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXDF.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%81%94%E5%90%88%E5%9B%BD%E5%9C%A8%E5%88%9A%E6%9E%9C%28%E9%87%91%29%E5%8D%97%E5%9F%BA%E4%BC%8D%E6%92%A4%E5%85%B5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
