--- a/articles/rfi/999968.md
+++ b/articles/rfi/999968.md
@@ -1,5 +1,5 @@
-<!--1713624303000-->
-[以色列袭击伊朗时也袭击了叙利亚南部一个军事雷达阵地](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0)
+<!--1713651301000-->
+[内塔尼亚胡:美国对以色列的援助“捍卫了西方文明”](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240420-%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1-%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9-%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E)
 ------
 
-<div>19/04/2024 - 20:13</div><img src="https://s.rfi.fr/media/display/1ff7a568-fe78-11ee-b2b7-005056bfb2b6/w:1280/p:16x9/Syria%20Deraa.PNG"><p><strong>据叙利亚国防部和一个非政府组织称，周五（4月19日）黎明时分，以色列在袭击伊朗中部时，也袭击了叙利亚南部一个军事雷达阵地。        </strong></p><div><p>叙利亚国防部在一份声明中说："2:55（格林尼治标准时间 23:55）左右，敌人以色列使用导弹（......）对我方在南部地区的防空地点发动了袭击"。叙利亚国防部补充说，袭击造成了"物质"损失，未提及是否有人员伤亡。</p><p>总部设在英国的非政府组织叙利亚人权观察站（OSDH）则报告说，"以色列袭击的目标是德拉（Deraa）省的一个叙利亚军队雷达阵地，该阵地探测到以色列飞机进入叙利亚领空"。</p><p>这个在叙利亚拥有庞大消息网络的非政府组织的负责人拉米-阿卜杜勒-拉赫曼（Rami Abdel Rahmane）对法新社说，袭击发生时，"以色列空军正在德拉地区上空密集飞行"，而叙利亚的防空部队并未采取行动。</p><p>自2011年叙利亚战争爆发以来，以色列军队在叙利亚发动了数百次袭击，特别针对亲伊朗团体。</p><p> "雷达阵地"   </p><p>当地网络媒体 “Suwayda 24” 的负责人马鲁夫（Rayan Maarouf）此前告诉法新社，该地区的"叙利亚军队雷达阵地遭到了袭击"，但他没有说明消息来源。</p><p>据报道，周五凌晨叙利亚遭空袭的时间几乎与伊朗中部听到巨大爆炸声的时间一致。据美国媒体援引美国高级官员的话说，那是以色列发动的袭击。</p><p>据伊朗官方法尔斯通讯社报道，德黑兰当局称，该国中部一个军事基地附近发生了三起爆炸。</p><p>伊朗官方通讯社伊斯兰共和国通讯社Irna表示，爆炸发生后“没有造成重大损失”的报告。</p><p>上周末，伊朗向以色列境内发射了数百枚导弹和致命无人机，以色列曾警告称将进行报复。在那次对以色列史无前例的袭击之前，伊朗驻大马士革领事馆遭到袭击，尽管以色列没有承责，但伊朗认为是以色列干的。</p><p>4月1日的袭击摧毁了伊朗领事馆，造成16人死亡，其中有7名伊朗伊斯兰革命卫队成员，包括两名高级军官。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4H.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E8%25A2%25AD%25E5%2587%25BB%25E5%258F%2599%25E5%2588%25A9%25E4%25BA%259A%25E5%258D%2597%25E9%2583%25A8%25E4%25B8%2580%25E4%25B8%25AA%25E5%2586%259B%25E4%25BA%258B%25E9%259B%25B7%25E8%25BE%25BE%25E9%2598%25B5%25E5%259C%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E6%97%B6%E4%B9%9F%E8%A2%AD%E5%87%BB%E4%BA%86%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAX4H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E6%97%B6%E4%B9%9F%E8%A2%AD%E5%87%BB%E4%BA%86%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAX4H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4H.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E6%97%B6%E4%B9%9F%E8%A2%AD%E5%87%BB%E4%BA%86%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>20/04/2024 - 23:23</div><img src="https://s.rfi.fr/media/display/c626eb40-f024-11ee-b825-005056bf30b7/w:1280/p:16x9/2024-03-31T135038Z_1609163870_RC2WC5A0S4MC_RTRMADP_3_ISRAEL-POLITICS-NETANYAHU.JPG"><p><strong>在以色列与巴勒斯坦哈马斯战争持续并与伊朗紧张加剧的背景下，美国众议院周六(4月20日）通过对乌克兰、以色列和台湾950亿美元庞大对外援助法案，其中包括向以色列提供264亿美元新的军事援助。以色列总理内塔尼亚胡称，新军事援助是“捍卫了西方文明”。        </strong></p><div><p>法新社报道，美国国会众院周六以366票对58票通过"以色列安全补充法案"（Israel Security Supplemental bill），以向以色列提供264亿美元援助。</p><p>以色列总理内塔尼亚胡立即对此表示欢迎。内塔尼亚胡在X上写道：“美国国会刚刚以压倒性多数通过了一项广受欢迎的援助法案，该法案表明了两党对以色列的强有力支持并捍卫了西方文明。”</p><p>以色列外长卡茨也对美国众议院的投票表示欢迎，卡茨在他的X账户上表示，这次投票“证明了以色列和美国之间的密切关系和战略伙伴关系，并向我们的敌人发出了强烈的信息”。</p><p>法新社称，在以色列周五向伊朗发起报复性袭击后，伊朗和以色列似乎正在摆脱可能的紧张升级，德黑兰则是淡化了以色列袭击的程度范围。伊朗中部伊斯法罕地区的一个军事基地附近周五凌晨传出爆炸，美国媒体援引美国官员的话称，这是以色列针对4月13日伊朗对以色列发动无人机和导弹袭击而采取的行动。 以色列此前誓言要让伊朗为袭击以色列付出代价。</p><p>与此同时，以色列军队对被围困的加沙地带发动了数十次袭击，据民防部门称，其中一次袭击导致该地区南部拉法同一家庭的九名成员死亡，其中包括儿童。</p><p>另据巴勒斯坦卫生部门周六表示，以色列军队自进入约旦河西岸城市图勒凯尔姆开展军事行动以来，已造成至少13名巴勒斯坦人死亡。</p><p>巴勒斯坦表示，以军部分撤离图勒凯尔姆后，救援人员进入冲突现场，发现死者遗体。</p><p>巴勒斯坦传媒报道，以巴在图勒凯尔姆冲突期间，以军阻止救援人员进入现场救治。以色列传媒表示，行动期间，以军多次遭到巴人武装伏击，至少有9名以军士兵受伤。</p><p>另据报道，土耳其外长菲丹周六与埃及外长舒凯里在土耳其伊斯坦布尔会晤，讨论巴以冲突、伊朗和以色列的对抗、加沙地带的人道主义局势以及双边关系等问题。</p><p>菲丹会晤后表示，巴以冲突导致全球物流链受冲击，物价飞涨，为防止外溢效应引发全球性经济危机，必须果断采取措施，从根本上解决问题。他并表示，当务之急是实现两国方案。</p><p>舒凯里表示，巴以冲突有可能蔓延，伊以对抗局势已加剧，埃及方面呼吁各方保持克制，冲突、互不理解和暴力应马上停止。他称，伊以对抗转移了国际社会对加沙地带局势的关注。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXDT.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240420-%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AF%25B9%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E7%259A%2584%25E6%258F%25B4%25E5%258A%25A9-%25E6%258D%258D%25E5%258D%25AB%25E4%25BA%2586%25E8%25A5%25BF%25E6%2596%25B9%25E6%2596%2587%25E6%2598%258E&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%3A%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9%E2%80%9C%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAXDT.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%3A%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9%E2%80%9C%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E%E2%80%9D%20-%20https%3A%2F%2Frfi.my%2FAXDT.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXDT.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%3A%E7%BE%8E%E5%9B%BD%E5%AF%B9%E4%BB%A5%E8%89%B2%E5%88%97%E7%9A%84%E6%8F%B4%E5%8A%A9%E2%80%9C%E6%8D%8D%E5%8D%AB%E4%BA%86%E8%A5%BF%E6%96%B9%E6%96%87%E6%98%8E%E2%80%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
