--- a/articles/rfi/999969.md
+++ b/articles/rfi/999969.md
@@ -1,5 +1,5 @@
-<!--1713624302000-->
-[所罗门群岛总理索加瓦雷保住自己的议席 但能否组阁未定](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240420-%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E6%80%BB%E7%90%86%E7%B4%A2%E5%8A%A0%E7%93%A6%E9%9B%B7%E4%BF%9D%E4%BD%8F%E8%87%AA%E5%B7%B1%E7%9A%84%E8%AE%AE%E5%B8%AD-%E4%BD%86%E8%83%BD%E5%90%A6%E7%BB%84%E9%98%81%E6%9C%AA%E5%AE%9A)
+<!--1713640502000-->
+[台湾宣布在本岛周边发现21架中国军机](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240420-%E5%8F%B0%E6%B9%BE%E5%AE%A3%E5%B8%83%E5%9C%A8%E6%9C%AC%E5%B2%9B%E5%91%A8%E8%BE%B9%E5%8F%91%E7%8E%B021%E6%9E%B6%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA)
 ------
 
-<div>20/04/2024 - 16:17</div><img src="https://s.rfi.fr/media/display/d8d5ea44-4be6-11ee-a27e-005056bfb2b6/w:1280/p:16x9/Vue%20aerienne%20du%20centre-ville%20d%27Honiara.JPG"><p><strong>所罗门群岛选举计票缓慢，选举负责人说，计票过程的公正性是首要任务，投票箱由警方严密保护。著名批评中国者，马莱塔省前省长再当选议员，他称人们试图将该省从“糟糕的领导和腐败”中拯救出来。        </strong></p><div><p>据路透社4月20日报道，周六获知的选举结果（临时）显示，所罗门群岛总理索加瓦雷（Manasseh Sogavare）保住了他自己在议会的席位，但他所在的所罗门群岛党能否组建下一届政府还需要数天时间来决定。</p><p>本周三所罗门群岛举行的全国大选是索加瓦雷在2022年与中国达成安全协议以来的首次大选，该条约拉近了这个太平洋岛国与中国政府的关系，这对地区安全构成潜在的影响，美国和澳大利亚表示担忧。</p><p>来自澳大利亚、新西兰、巴布亚新几内亚和斐济的警察及国防部队正在协助选举的安保工作。</p><p>由 50 名议员组成的议会的全部选举结果预计将于下周揭晓，届时将显示是否有政党获得多数席位，或者是否需要通过谈判组建联盟来推选总理。</p><p><strong>计票缓慢</strong></p><p>在以往的选举中，有大量独立候选人获胜，导致联盟不稳定。</p><p>所罗门群岛举行的全国和省级选举结果将在几天内公布。选举负责人贾斯珀-海伍德-阿尼西（Jasper Highwood Anisi）说，计票工作进展缓慢，但为维护公众信任，计票过程的公正性是首要任务，投票箱由警方严密保护。</p><p>官方结果显示，索加瓦雷在东乔伊瑟尔选区赢得了49%的选票，击败了联合党候选人戴维-库鲁苏（David Qurusu），后者获得42%的选票。</p><p>据广播公司 SIBC 周六报道，所罗门群岛民主党，前反对党领袖马修-瓦莱（Matthew Wale）保住了他在马莱塔省奥克（Aoke）的议席。</p><p><strong>“糟糕的领导和腐败”</strong></p><p>丹尼尔-苏伊达尼（Daniel Suidani）是该国著名批评中国的人，曾任人口最多的马莱塔省省长，直到去年在不信任投票中被赶下台。</p><p>官员们表示，丹尼尔·苏达尼(Daniel Suidani)已再次当选马莱塔省议会的议员。</p><p>作为省长，他曾禁止中国企业进入马莱塔这个所罗门群岛人口最多的省份，并接受美国的发展援助，但在去年因他拒绝承认中国而被议员投票罢免。</p><p>丹尼尔·苏达尼表示，他的胜利表明马莱塔选民希望看到政府发生变化。他对路透社表示：“他们（选民）正试图将该省从糟糕的领导和腐败中拯救出来”。他还表示，省议会的最终计票数字尚不清楚。</p><p>中国本月向马莱塔省派出了其在南太平洋的最高特使，与马莱塔省新任省长马丁-菲尼（Martin Fini）签署了一份谅解备忘录。但选举官员表示，这次菲尼已经失去了他在省议会的席位。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXB2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240420-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E7%25BE%25A4%25E5%25B2%259B%25E6%2580%25BB%25E7%2590%2586%25E7%25B4%25A2%25E5%258A%25A0%25E7%2593%25A6%25E9%259B%25B7%25E4%25BF%259D%25E4%25BD%258F%25E8%2587%25AA%25E5%25B7%25B1%25E7%259A%2584%25E8%25AE%25AE%25E5%25B8%25AD-%25E4%25BD%2586%25E8%2583%25BD%25E5%2590%25A6%25E7%25BB%2584%25E9%2598%2581%25E6%259C%25AA%25E5%25AE%259A&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E6%80%BB%E7%90%86%E7%B4%A2%E5%8A%A0%E7%93%A6%E9%9B%B7%E4%BF%9D%E4%BD%8F%E8%87%AA%E5%B7%B1%E7%9A%84%E8%AE%AE%E5%B8%AD%20%E4%BD%86%E8%83%BD%E5%90%A6%E7%BB%84%E9%98%81%E6%9C%AA%E5%AE%9A%20-%20https%3A%2F%2Frfi.my%2FAXB2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E6%80%BB%E7%90%86%E7%B4%A2%E5%8A%A0%E7%93%A6%E9%9B%B7%E4%BF%9D%E4%BD%8F%E8%87%AA%E5%B7%B1%E7%9A%84%E8%AE%AE%E5%B8%AD%20%E4%BD%86%E8%83%BD%E5%90%A6%E7%BB%84%E9%98%81%E6%9C%AA%E5%AE%9A%20-%20https%3A%2F%2Frfi.my%2FAXB2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXB2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E6%80%BB%E7%90%86%E7%B4%A2%E5%8A%A0%E7%93%A6%E9%9B%B7%E4%BF%9D%E4%BD%8F%E8%87%AA%E5%B7%B1%E7%9A%84%E8%AE%AE%E5%B8%AD%20%E4%BD%86%E8%83%BD%E5%90%A6%E7%BB%84%E9%98%81%E6%9C%AA%E5%AE%9A&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 09:35</div><img src="https://s.rfi.fr/media/display/800b6492-fee8-11ee-ad65-005056bfb2b6/w:1280/p:16x9/%E5%8F%B0%E6%B5%B7%E5%86%9B%E6%9C%BA.JPG"><p><strong>台湾国防部周六4月20日宣布，自当地时间8时15分（格林尼治标准时间0时15分）以来，在台湾岛周围已发现21架中国军机，此时距离当选总统赖清德的就职典礼还有一个月的时间。        </strong></p><div><p>法新社台北报道，台湾国防部在一份声明中说，"21 架飞机中有17 架越过了台湾海峡的中线"，台湾武装部队"正在使用监视系统观察这些活动，并已部署适当手段做出相应反应"。</p><p>该报道说，中线是中国和台湾之间的非官方分界线，但中国不承认。台湾是一个自治岛屿，北京声称是其领土的一部分，并希望有一天能够夺取台湾，必要时可以使用武力。</p><p>中国飞机入侵事件的激增是专家们所说的"灰色地带"战略的一部分，即没有采取实际战争行动的恐吓行动。</p><p>自 2016 年蔡英文当选台湾总统以来，中国这些行动愈演愈烈。蔡英文认为台湾事实上"已经独立"，而这是北京的红线。</p><p>蔡英文女士将于 5 月 20 日把她的职位移交给台湾现任副总统赖清德，赖清德和蔡女士一样都是民进党（PDP）党员。</p><p>作为1月13日总统选举的获胜者，赖清德也支持对北京采取强硬路线。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX7s.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240420-%25E5%258F%25B0%25E6%25B9%25BE%25E5%25AE%25A3%25E5%25B8%2583%25E5%259C%25A8%25E6%259C%25AC%25E5%25B2%259B%25E5%2591%25A8%25E8%25BE%25B9%25E5%258F%2591%25E7%258E%25B021%25E6%259E%25B6%25E4%25B8%25AD%25E5%259B%25BD%25E5%2586%259B%25E6%259C%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%8F%B0%E6%B9%BE%E5%AE%A3%E5%B8%83%E5%9C%A8%E6%9C%AC%E5%B2%9B%E5%91%A8%E8%BE%B9%E5%8F%91%E7%8E%B021%E6%9E%B6%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAX7s.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%8F%B0%E6%B9%BE%E5%AE%A3%E5%B8%83%E5%9C%A8%E6%9C%AC%E5%B2%9B%E5%91%A8%E8%BE%B9%E5%8F%91%E7%8E%B021%E6%9E%B6%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA%20-%20https%3A%2F%2Frfi.my%2FAX7s.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX7s.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%8F%B0%E6%B9%BE%E5%AE%A3%E5%B8%83%E5%9C%A8%E6%9C%AC%E5%B2%9B%E5%91%A8%E8%BE%B9%E5%8F%91%E7%8E%B021%E6%9E%B6%E4%B8%AD%E5%9B%BD%E5%86%9B%E6%9C%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
