--- a/articles/rfi/999971.md
+++ b/articles/rfi/999971.md
@@ -1,5 +1,5 @@
-<!--1713611701000-->
-[七国集团外长就中企对俄转让军民两用材料、武器部件表强烈关切 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240419-%E4%B8%83%E5%9B%BD%E9%9B%86%E5%9B%A2%E5%A4%96%E9%95%BF-%E5%B0%B1%E4%B8%AD%E4%BC%81%E5%AF%B9%E4%BF%84%E8%BD%AC%E8%AE%A9%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E6%9D%90%E6%96%99-%E6%AD%A6%E5%99%A8%E9%83%A8%E4%BB%B6%E8%A1%A8%E7%A4%BA%E5%BC%BA%E7%83%88%E5%85%B3%E5%88%87)
+<!--1713640501000-->
+[纽时:中国游泳运动员在东京奥运会前兴奋剂检测呈阳性是怎样逃脱的](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240420-%E7%BA%BD%E6%97%B6-%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84)
 ------
 
-<div>20/04/2024 - 01:23</div><img src="https://s.rfi.fr/media/display/61ed65ac-fe91-11ee-a140-005056a90284/w:1280/p:16x9/AP24109621815441.jpg"><p><strong>4月17日至19日，七国集团（G7）外长会在意大利卡普里岛举行。美国国务卿布林肯（Antony Blinken）会后在出席记者会时表示，在莫斯科继续入侵乌克兰之际，中国是俄罗斯国防工业基地的“主要贡献者”，向俄罗斯转让军民两用材料和武器部件。与此同时，七国集团外长和欧盟外交与安全政策高级代表通过会后发表的联合声明，就中国企业对俄转让军民两用材料和武器部件表达了“强烈关切”。                    </strong></p><div><p>七国集团外长和欧盟高级代表就“坚定支持乌克兰”的声明中写道：“我们，七国集团的加拿大、法国、德国、意大利、日本、联合王国和美利坚合众国的外交部长以及欧洲联盟高级代表，强烈谴责俄罗斯对乌克兰的持续侵略战争。我们重申坚定不移地支持民主的乌克兰捍卫其在国际公认边界内的自由、主权、独立和领土完整。我们向为自由与民主未来而战的乌克兰人民的勇敢和坚韧致敬”。</p><p>声明指：“自俄罗斯非法占领克里米亚并在顿巴斯部分地区建立未经承认的傀儡政权以来，十年过去了，俄罗斯全面入侵乌克兰已进入第三年，我们要求俄罗斯联邦立即、全面、无条件地从国际公认的乌克兰领土上撤出其所有军事力量和装备。俄罗斯今天就可以结束这场战争。我们呼吁所有国家维护国际法，绝不认可或纵容俄罗斯违反《联合国宪章》基本原则，企图以武力获取领土的行为。我们绝不承认俄罗斯过去或将来在乌克兰临时被占领土上举行的所谓‘公投’或‘选举’的合法性，也绝不承认其结果。在乌克兰主权领土上非法举行俄罗斯总统选举是对国际法的粗暴践踏”。</p><p>声明表示：“我们将继续支持乌克兰的自卫权，并重申我们对乌克兰长期安全的承诺。根据我们于2023年7月在维尔纽斯赞同的《支持乌克兰联合声明》，我们正全力以赴敲定并落实与乌克兰的具体双边长期安全承诺与安排，一些七国集团国家和其他伙伴已经签署了这些承诺与安排。我们正在加强对乌克兰的防务和安全援助，并提高我们的生产和运载能力，以协助该国。我们还支持努力协助乌克兰建设一支能够自卫和威慑一切侵略的未来部队”。</p><p>声明提及：“俄罗斯必须为其造成的损害和破坏付出代价。我们谴责俄罗斯最近对乌克兰能源基础设施和乌克兰各地城市发动的导弹和无人机袭击。我们决心确保全面追究责任，我们支持乌克兰就俄罗斯侵略造成的损失、伤害和破坏获得赔偿。我们欢迎启动俄罗斯联邦侵略乌克兰所造成损失登记册。在俄罗斯停止侵略并赔偿其造成的损失之前，俄罗斯在我们管辖范围内的主权资产将继续被冻结”。</p><p>声明续指：“我们欢迎欧盟通过关于私营实体直接从俄罗斯被冻结的主权资产中获得的特别收入的法律法案，这也是为了探索如何使乌克兰从这些收入中获得最大利益。我们将继续探索一切可能的途径，根据我们各自的法律制度和国际法，帮助乌克兰从俄罗斯获得赔偿。应与会领导人的要求，我们将继续开展工作，并在（七国集团）阿普利亚峰会之前，根据我们各自的法律制度和国际法，就利用俄罗斯无法动用的主权资产支持乌克兰的所有可能途径和可行方案提出建议”。</p><p>针对莫斯科在这场战争中得到来自朝鲜、伊朗等国的武器援助，及中国的物资贸易和支持同样是七国集团外长与欧盟高级代表重视的议题。</p><p>声明指，“我们以最强烈的措辞谴责朝鲜向俄罗斯非法出口武器并用于乌克兰。我们尤其谴责朝鲜出口和俄罗斯采购朝鲜的弹道导弹，这直接违反了联合国安理会的相关决议，并呼吁它们立即停止此类活动。我们呼吁伊朗停止协助俄罗斯在乌克兰的战争努力。伊朗向俄罗斯转让弹道导弹和相关技术的任何步骤都将意味着实质性、物质的升级，我们将以协调一致的方式迅速作出反应，包括对伊朗采取新的重大措施。我们呼吁所有国家防止向伊朗的无人机计划提供支持俄罗斯战争努力的部件或其他物品”。</p><p>声明续称：“我们对中华人民共和国（PRC）企业向俄罗斯转让军民两用材料和武器部件表示强烈关切，俄罗斯正利用这些材料和部件推进其军事生产。这使俄罗斯得以重建和振兴其国防工业基地，对乌克兰及国际和平与安全构成威胁。中国应确保停止这种支持，因为这只会延长这场违反《联合国宪章》的非法侵略战争，并增加俄罗斯对其邻国的威胁”。</p><p>七国集团外长和欧盟高级代表在另一篇关注更为广泛的国际及区域性问题所发表的联合声明中亦提及：“我们重申必须维护《联合国宪章》的全部原则。在这方面，我们呼吁中国迫使俄罗斯停止军事侵略。我们对中国企业向俄罗斯转让军民两用材料、武器部件和军事生产设备表示强烈关切”。</p><p>该声明同时表示：“我们认识到与中国保持建设性稳定关系的重要性。我们重申有必要与中国坦诚接触，并直接向中国表达我们的关切。中国是应对全球挑战的重要对话者，我们愿与中国在共同关心的领域开展合作”。</p><p>此外，布林肯周五在会后出席新闻发布会时就会议议程介绍称：“我们还致力于加大力度阻止武器转让以及对俄罗斯国防工业基础的投入。说到武器，我们看到的当然主要是朝鲜和伊朗向俄罗斯提供东西。但说到俄罗斯的国防工业基地，目前的主要贡献者是中国。我们看到，中国分享机床、半导体和其他军民两用产品，帮助俄罗斯重建国防工业基础，而制裁和出口管制曾大大削弱了俄罗斯的国防工业基础。现在，如果中国一方面声称希望与欧洲和其他国家保持良好关系，那么另一方面就不能助长冷战结束以来对欧洲安全的最大威胁。你们不必只听我说，这是我在七国集团（外长）会上听到的”。</p><p>布林肯稍后还告诉媒体说，“在过去的几天里，我们集中精力拓展新的合作伙伴，其中包括在印天地区，我们正在努力促进一个自由开放的印度-太平洋。在这里，我认为俄罗斯从中国、朝鲜和伊朗获得的支持非常具有启发性，这表明欧洲安全、亚洲安全和世界其他地区的安全是不可分割的。它们之间有着深厚的联系。这也是我们在过去几天的会上所听到的”。</p><p>此外，布林肯在答记者问环节中表示：“关于中国和俄罗斯，听着，我认为我们看到的是这两个国家之间关系的产物。你们已经听到他们谈到了这一点，包括就在俄罗斯侵略乌克兰之前。我们已经向中国——许多其他国家也是如此——明确表示，他们不应向俄罗斯提供武器，用于其对乌克兰的侵略”。</p><p>布林肯称：“我们没有看到直接的武器供应，但正如我所说，我们看到的不仅是直接供应，而且是为俄罗斯国防工业基地提供重要的投入和零部件，这使得两件事得以发生：它允许俄罗斯继续侵略乌克兰。它还在帮助俄罗斯全面重建其国防部队和国防能力，而乌克兰人以及我们的制裁和出口管制对其造成了巨大的破坏。这意味着俄罗斯不仅是乌克兰当前的威胁，也将是其他欧洲国家的持久威胁”。</p><p>布林肯续称：“这就是为什么我说中国不能二者兼得。 它不能一方面声称希望与欧洲各国建立积极友好的关系，另一方面又助长冷战结束以来对欧洲安全的最大威胁。这一点从我们在会议桌旁的谈话中可以看得非常清楚。我相信欧洲人已经表达了这一点，并将在今后几天和几周内继续向中方明确表达”。</p><p>布林肯将于下周赴华访问，寻求讨论对上述问题的关切。据政客新闻网报导，他将于4月23日启程，进行为期四天的访问。此行还正值北京与华盛顿之间的紧张关系加剧之际，尤其是在贸易问题上。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%BC%97%E6%9E%97/" title="弗林">弗林</a></div></div></div></div>
+<div>20/04/2024 - 20:08</div><img src="https://s.rfi.fr/media/display/116b19c6-ff40-11ee-beb1-005056a90284/w:1280/p:16x9/AP24111179328197.jpg"><p><strong>据纽约时报4月20日报道，在 2021 年东京奥运会前7个月，23 名顶尖的中国游泳运动员被检测出对同一种强效禁药呈阳性反应，但由于中国高官暗中为他们洗脱了使用兴奋剂的罪名，而负责监管体育竞赛使用药物的全球权威机构也选择不予干预，因此他们得以逃脱公众监督，继续参加比赛。        </strong></p><div><p>这个报道说，检测结果呈阳性的多名运动员--包括中国派出参加东京奥运会的游泳队中的近一半--后来都获得了奖牌，其中包括三枚金牌。他们中的许多人仍在为中国参赛，包括两枚金牌得主张雨霏在内的几名运动员有望在今年的巴黎夏季奥运会上再次争夺奖牌。</p><p>中国在其反兴奋剂监管机构的一份报告中承认了阳性检测结果，称这些游泳运动员是在不知情的情况下摄入了极少量禁药，因此没有必要对他们采取任何行动。</p><p>但《纽约时报》的调查发现，这一此前未被报道的事件在反兴奋剂领域造成了严重分歧，而中国运动员的成绩一直是该领域的热点。</p><p><strong>往来邮件显示</strong></p><p>美国官员和其他专家说，在进一步调查之前，这些游泳运动员本应被停赛或公开身份，他们认为，中国体育官员、游泳国际管理机构--世界水上运动协会以及负责监督各国药物检测项目的全球权威机构--世界反兴奋剂机构都没有做到这一点。</p><p>尽管一名中国反兴奋剂官员和一名世界游泳最高级别官员之间的往来邮件似乎表明可能发生了违规行为，而且至少必须公开承认，但这些主管当局还是决定不采取行动。</p><p>这篇报道说，即使在其他国家和国际反兴奋剂官员多次向世界反兴奋剂机构（WADA）提供情报，表明中国游泳运动员掩盖真相和使用兴奋剂之后，该机构仍选择不追究运动员的责任，声称 "缺乏任何可信的证据 "来质疑中国对事件的说法。世界反兴奋剂机构为其不采取行动的决定进行了辩护，称批评没有事实根据。</p><p><strong>美国长臂起诉</strong></p><p>据两位熟悉此案的人士和《纽约时报》审阅的一份文件称，联邦调查局（FBI）去年了解到这些阳性检测结果的存在和中方为运动员洗脱罪名所给出的理由，以及世界反兴奋剂机构的不作为。</p><p>美国联邦调查人员在最近几周采取了一些措施，以了解更多的情况。但联调局的发言人拒绝发表评论。美国当局的任何调查都将借助一个强大的新法律工具：2020 年通过的一项法律赋予美国司法部对企图通过使用兴奋剂败坏国际体育赛事的行为进行刑事起诉的权力，无论这些行为在哪里发生。</p><p>在回答《纽约时报》提问的声明中，美国反兴奋剂机构指责世界反兴奋剂机构（WADA）--其全球对应机构--未能履行其使命。</p><p><strong>干净运动员背后捅一刀</strong></p><p>美国反兴奋剂机构首席执行官特拉维斯-T-泰加特（Travis T. Tygart）说："这似乎是在干净运动员的背后捅了一刀，是对所有公平竞争、遵守规则的运动员的深深背叛”。"泰加特承认，自2020年以来，他曾多次向世界反兴奋剂机构提供有关对中国游泳界使用兴奋剂的指控。"所有那些掩盖这些阳性结果、压制勇敢举报者声音的肮脏之手，都必须在规则和法律的最大范围内被追究责任。"</p><p>纽时这篇报道说，本文基于对机密文件和电子邮件（包括由中国反兴奋剂机构编写并提交给世界反兴奋剂机构的报告）的审查，以及对世界各地参与反兴奋剂工作的人员的采访。有些采访是在不透露消息来源的基础上进行的，因为他们未被授权公开发言或担心遭到报复。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXCN.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240420-%25E7%25BA%25BD%25E6%2597%25B6-%25E4%25B8%25AD%25E5%259B%25BD%25E6%25B8%25B8%25E6%25B3%25B3%25E8%25BF%2590%25E5%258A%25A8%25E5%2591%2598%25E5%259C%25A8%25E4%25B8%259C%25E4%25BA%25AC%25E5%25A5%25A5%25E8%25BF%2590%25E4%25BC%259A%25E5%2589%258D%25E5%2585%25B4%25E5%25A5%258B%25E5%2589%2582%25E6%25A3%2580%25E6%25B5%258B%25E5%2591%2588%25E9%2598%25B3%25E6%2580%25A7%25E6%2598%25AF%25E6%2580%258E%25E6%25A0%25B7%25E9%2580%2583%25E8%2584%25B1%25E7%259A%2584&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BA%BD%E6%97%B6%3A%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84%20-%20https%3A%2F%2Frfi.my%2FAXCN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BA%BD%E6%97%B6%3A%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84%20-%20https%3A%2F%2Frfi.my%2FAXCN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXCN.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BA%BD%E6%97%B6%3A%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
