--- a/articles/rfi/999972.md
+++ b/articles/rfi/999972.md
@@ -1,5 +1,5 @@
-<!--1713611701000-->
-[戴琪：对中国商品关税的审查将“很快”结束](https://www.rfi.fr/cn/%E7%BB%8F%E8%B4%B8/20240419-%E6%88%B4%E7%90%AA-%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86-%E5%BE%88%E5%BF%AB-%E7%BB%93%E6%9D%9F)
+<!--1713624303000-->
+[以色列袭击伊朗时也袭击了叙利亚南部一个军事雷达阵地](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0)
 ------
 
-<div>19/04/2024 - 22:59</div><img src="https://s.rfi.fr/media/display/1ffbec94-a1b4-11ed-b3c1-005056a90284/w:1280/p:16x9/2023-01-31T171740Z_1417667005_RC2UZX9T8WZU_RTRMADP_3_USA-TRADE-CHINA-TECH.JPG"><p><strong>美国贸易代表戴琪4月19日在受访时表示，她预计“很快”就会对价值3000多亿美元中国商品加征关税的审查得出结论，拜登政府一直在研究如何使相关措施更具战略性和有效性。        </strong></p><div><p>戴琪周五在接受彭博电视节目采访时说，拜登政府保留从特朗普执政时期继承的关税是出于 “战略目的”，并将其视为与北京打交道的有效筹码。她还指出，中国钢铁和铝业的产能过剩不仅威胁到美国，也威胁到世界各国，因此需要采取强有力的应对措施。</p><p>戴琪说，拜登政府正寻求“挺身而出，抵制那些可能被用来对经济体施加政治压力的弱点所带来的胁迫”。拜登总统周三讲话呼吁对中国钢铁和铝征收更高的关税，因为他想在11月大选前争取工会工人的支持。</p><p>拜登政府正推动的新关税，意在支撑美国钢铁业并讨好其工人，将对某些中国钢铁和铝产品征收25%的关税。这些关税将作为正在进行的审查的一部分，同时美国还对中国的造船业展开正式调查。</p><p>对中国提高金属关税的原因是，多年来从中国进口产品对美国国内买家来说一直不赢利。目前的301条款关税、特朗普时代的232条款关税以及其他现有的反倾销和反补贴关税，有效地消减了中国钢铁和铝的进口。</p><p>同时，美国贸易代表办公室17日宣布对中国海事、物流和造船业发起301调查，美国钢铁工人联合会（USW）等五大工会上月曾联名要求拜登政府进行相关调查。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX50.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BB%258F%25E8%25B4%25B8%2F20240419-%25E6%2588%25B4%25E7%2590%25AA-%25E5%25AF%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E5%2595%2586%25E5%2593%2581%25E5%2585%25B3%25E7%25A8%258E%25E7%259A%2584%25E5%25AE%25A1%25E6%259F%25A5%25E5%25B0%2586-%25E5%25BE%2588%25E5%25BF%25AB-%25E7%25BB%2593%25E6%259D%259F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%88%B4%E7%90%AA%EF%BC%9A%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86%E2%80%9C%E5%BE%88%E5%BF%AB%E2%80%9D%E7%BB%93%E6%9D%9F%20-%20https%3A%2F%2Frfi.my%2FAX50.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%88%B4%E7%90%AA%EF%BC%9A%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86%E2%80%9C%E5%BE%88%E5%BF%AB%E2%80%9D%E7%BB%93%E6%9D%9F%20-%20https%3A%2F%2Frfi.my%2FAX50.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX50.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%88%B4%E7%90%AA%EF%BC%9A%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86%E2%80%9C%E5%BE%88%E5%BF%AB%E2%80%9D%E7%BB%93%E6%9D%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 20:13</div><img src="https://s.rfi.fr/media/display/1ff7a568-fe78-11ee-b2b7-005056bfb2b6/w:1280/p:16x9/Syria%20Deraa.PNG"><p><strong>据叙利亚国防部和一个非政府组织称，周五（4月19日）黎明时分，以色列在袭击伊朗中部时，也袭击了叙利亚南部一个军事雷达阵地。        </strong></p><div><p>叙利亚国防部在一份声明中说："2:55（格林尼治标准时间 23:55）左右，敌人以色列使用导弹（......）对我方在南部地区的防空地点发动了袭击"。叙利亚国防部补充说，袭击造成了"物质"损失，未提及是否有人员伤亡。</p><p>总部设在英国的非政府组织叙利亚人权观察站（OSDH）则报告说，"以色列袭击的目标是德拉（Deraa）省的一个叙利亚军队雷达阵地，该阵地探测到以色列飞机进入叙利亚领空"。</p><p>这个在叙利亚拥有庞大消息网络的非政府组织的负责人拉米-阿卜杜勒-拉赫曼（Rami Abdel Rahmane）对法新社说，袭击发生时，"以色列空军正在德拉地区上空密集飞行"，而叙利亚的防空部队并未采取行动。</p><p>自2011年叙利亚战争爆发以来，以色列军队在叙利亚发动了数百次袭击，特别针对亲伊朗团体。</p><p> "雷达阵地"   </p><p>当地网络媒体 “Suwayda 24” 的负责人马鲁夫（Rayan Maarouf）此前告诉法新社，该地区的"叙利亚军队雷达阵地遭到了袭击"，但他没有说明消息来源。</p><p>据报道，周五凌晨叙利亚遭空袭的时间几乎与伊朗中部听到巨大爆炸声的时间一致。据美国媒体援引美国高级官员的话说，那是以色列发动的袭击。</p><p>据伊朗官方法尔斯通讯社报道，德黑兰当局称，该国中部一个军事基地附近发生了三起爆炸。</p><p>伊朗官方通讯社伊斯兰共和国通讯社Irna表示，爆炸发生后“没有造成重大损失”的报告。</p><p>上周末，伊朗向以色列境内发射了数百枚导弹和致命无人机，以色列曾警告称将进行报复。在那次对以色列史无前例的袭击之前，伊朗驻大马士革领事馆遭到袭击，尽管以色列没有承责，但伊朗认为是以色列干的。</p><p>4月1日的袭击摧毁了伊朗领事馆，造成16人死亡，其中有7名伊朗伊斯兰革命卫队成员，包括两名高级军官。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4H.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E8%25A2%25AD%25E5%2587%25BB%25E5%258F%2599%25E5%2588%25A9%25E4%25BA%259A%25E5%258D%2597%25E9%2583%25A8%25E4%25B8%2580%25E4%25B8%25AA%25E5%2586%259B%25E4%25BA%258B%25E9%259B%25B7%25E8%25BE%25BE%25E9%2598%25B5%25E5%259C%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E6%97%B6%E4%B9%9F%E8%A2%AD%E5%87%BB%E4%BA%86%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAX4H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E6%97%B6%E4%B9%9F%E8%A2%AD%E5%87%BB%E4%BA%86%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAX4H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4H.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E6%97%B6%E4%B9%9F%E8%A2%AD%E5%87%BB%E4%BA%86%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
