--- a/articles/rfi/999976.md
+++ b/articles/rfi/999976.md
@@ -1,5 +1,5 @@
-<!--1713591902000-->
-[国际货币基金组织：欧盟应该加强单一市场，以缩小与美国的差距](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240419-%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87-%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D)
+<!--1713611701000-->
+[戴琪：对中国商品关税的审查将“很快”结束](https://www.rfi.fr/cn/%E7%BB%8F%E8%B4%B8/20240419-%E6%88%B4%E7%90%AA-%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86-%E5%BE%88%E5%BF%AB-%E7%BB%93%E6%9D%9F)
 ------
 
-<div>20/04/2024 - 00:39</div><img src="https://s.rfi.fr/media/display/d6d2e1f0-fc05-11ee-945e-005056a90284/w:1280/p:16x9/2024-04-11T132347Z_1418145052_RC2C47AAXWUG_RTRMADP_3_ETHIOPIA-IMF.JPG"><p><strong>根据国际货币基金组织，欧盟必须进一步推进经济一体化，以提高生产率并缩小与美国的差距。        </strong></p><div><p>法新社从华盛顿报道，国际货币基金组织欧洲地区主任阿尔弗雷德·坎纳（Alfred Kanner）周五表示，欧盟必须进一步推进经济一体化，以提高生产率并缩小与美国的差距。</p><p>国际货币基金组织(IMF)欧洲地区主任阿尔弗雷德·坎纳在接受法新社采访时甚至表示说，如果欧盟能够将其单一市场内仍然存在的壁垒减少10个百分点的话，那么其GDP将会提高7%。</p><p>在举行了整整一周的国际货币基金组织和世界银行春季会议的最后一天，坎纳对法新社说，“与欧盟相比，美国的巨大优势在于它是一个大规模的单一市场”。</p><p>国际货币基金组织对2024年的经济预测显示，大西洋两岸之间存在差距，该组织预计，2024年，美国的经济增长率为2.7%，欧元区仅为0.8%；而2023年，美国是2.5%，欧元区是0.4%。</p><p>坎纳表示，对于欧洲来说，追赶上部分的落后，并不需要巨大的改变。他坚称，改善边境投资，推进银行业联盟、金融联盟，确保养老金可以从一个成员国转移到另一个成员国，促进劳工的流动，实现成员国之间文凭的认可，在这些问题上，是“不应该有任何争论的”。</p><p>坎纳还表示，欧洲国家必须进行结构性改革，为初始教育和整个职业生涯的教育和培训提供更多的空间。</p><p>他说，“为了加强技能，特别是随着人工智能的到来，我们需要工作方法的灵活性和适应性。”</p><p>不过，欧洲国家在生产率方面面临的主要挑战之一是人口老龄化，这一点在人口正在下降的欧洲大陆东部已经很明显。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX5c.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240419-%25E5%259B%25BD%25E9%2599%2585%25E8%25B4%25A7%25E5%25B8%2581%25E5%259F%25BA%25E9%2587%2591%25E7%25BB%2584%25E7%25BB%2587-%25E6%25AC%25A7%25E7%259B%259F%25E5%25BA%2594%25E8%25AF%25A5%25E5%258A%25A0%25E5%25BC%25BA%25E5%258D%2595%25E4%25B8%2580%25E5%25B8%2582%25E5%259C%25BA%25EF%25BC%258C%25E4%25BB%25A5%25E7%25BC%25A9%25E5%25B0%258F%25E4%25B8%258E%25E7%25BE%258E%25E5%259B%25BD%25E7%259A%2584%25E5%25B7%25AE%25E8%25B7%259D&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D%20-%20https%3A%2F%2Frfi.my%2FAX5c.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D%20-%20https%3A%2F%2Frfi.my%2FAX5c.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX5c.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%9B%BD%E9%99%85%E8%B4%A7%E5%B8%81%E5%9F%BA%E9%87%91%E7%BB%84%E7%BB%87%EF%BC%9A%E6%AC%A7%E7%9B%9F%E5%BA%94%E8%AF%A5%E5%8A%A0%E5%BC%BA%E5%8D%95%E4%B8%80%E5%B8%82%E5%9C%BA%EF%BC%8C%E4%BB%A5%E7%BC%A9%E5%B0%8F%E4%B8%8E%E7%BE%8E%E5%9B%BD%E7%9A%84%E5%B7%AE%E8%B7%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 22:59</div><img src="https://s.rfi.fr/media/display/1ffbec94-a1b4-11ed-b3c1-005056a90284/w:1280/p:16x9/2023-01-31T171740Z_1417667005_RC2UZX9T8WZU_RTRMADP_3_USA-TRADE-CHINA-TECH.JPG"><p><strong>美国贸易代表戴琪4月19日在受访时表示，她预计“很快”就会对价值3000多亿美元中国商品加征关税的审查得出结论，拜登政府一直在研究如何使相关措施更具战略性和有效性。        </strong></p><div><p>戴琪周五在接受彭博电视节目采访时说，拜登政府保留从特朗普执政时期继承的关税是出于 “战略目的”，并将其视为与北京打交道的有效筹码。她还指出，中国钢铁和铝业的产能过剩不仅威胁到美国，也威胁到世界各国，因此需要采取强有力的应对措施。</p><p>戴琪说，拜登政府正寻求“挺身而出，抵制那些可能被用来对经济体施加政治压力的弱点所带来的胁迫”。拜登总统周三讲话呼吁对中国钢铁和铝征收更高的关税，因为他想在11月大选前争取工会工人的支持。</p><p>拜登政府正推动的新关税，意在支撑美国钢铁业并讨好其工人，将对某些中国钢铁和铝产品征收25%的关税。这些关税将作为正在进行的审查的一部分，同时美国还对中国的造船业展开正式调查。</p><p>对中国提高金属关税的原因是，多年来从中国进口产品对美国国内买家来说一直不赢利。目前的301条款关税、特朗普时代的232条款关税以及其他现有的反倾销和反补贴关税，有效地消减了中国钢铁和铝的进口。</p><p>同时，美国贸易代表办公室17日宣布对中国海事、物流和造船业发起301调查，美国钢铁工人联合会（USW）等五大工会上月曾联名要求拜登政府进行相关调查。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX50.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BB%258F%25E8%25B4%25B8%2F20240419-%25E6%2588%25B4%25E7%2590%25AA-%25E5%25AF%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E5%2595%2586%25E5%2593%2581%25E5%2585%25B3%25E7%25A8%258E%25E7%259A%2584%25E5%25AE%25A1%25E6%259F%25A5%25E5%25B0%2586-%25E5%25BE%2588%25E5%25BF%25AB-%25E7%25BB%2593%25E6%259D%259F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%88%B4%E7%90%AA%EF%BC%9A%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86%E2%80%9C%E5%BE%88%E5%BF%AB%E2%80%9D%E7%BB%93%E6%9D%9F%20-%20https%3A%2F%2Frfi.my%2FAX50.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%88%B4%E7%90%AA%EF%BC%9A%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86%E2%80%9C%E5%BE%88%E5%BF%AB%E2%80%9D%E7%BB%93%E6%9D%9F%20-%20https%3A%2F%2Frfi.my%2FAX50.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX50.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%88%B4%E7%90%AA%EF%BC%9A%E5%AF%B9%E4%B8%AD%E5%9B%BD%E5%95%86%E5%93%81%E5%85%B3%E7%A8%8E%E7%9A%84%E5%AE%A1%E6%9F%A5%E5%B0%86%E2%80%9C%E5%BE%88%E5%BF%AB%E2%80%9D%E7%BB%93%E6%9D%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
