--- a/articles/rfi/999977.md
+++ b/articles/rfi/999977.md
@@ -1,5 +1,5 @@
-<!--1713591902000-->
-[欧盟看到中国向俄罗斯供应军民两用产品的迹象](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1)
+<!--1713611701000-->
+[解放军成立信息支援部队 撤销战略支援部队番号](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-%E8%A7%A3%E6%94%BE%E5%86%9B%E6%88%90%E7%AB%8B%E4%BF%A1%E6%81%AF%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F-%E6%92%A4%E9%94%80%E6%88%98%E7%95%A5%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%E7%95%AA%E5%8F%B7)
 ------
 
-<div>19/04/2024 - 18:13</div><img src="https://s.rfi.fr/media/display/ea51fe98-baae-11ee-8e54-005056a97e36/w:1280/p:16x9/%D0%92%D1%96%D1%86%D0%B5%D0%BF%D1%80%D0%B5%D0%B7%D0%B8%D0%B4%D0%B5%D0%BD%D1%82%20%D0%84%D0%B2%D1%80%D0%BE%D0%BA%D0%BE%D0%BC%D1%96%D1%81%D1%96%D1%97%20%D0%92%D0%B0%D0%BB%D0%B4%D1%96%D1%81%20%D0%94%D0%BE%D0%BC%D0%B1%D1%80%D0%BE%D0%B2%D1%81%D0%BA%D1%96%D1%81.%20%D0%91%D1%80%D1%8E%D1%81%D1%81%D0%B5%D0%BB%D1%8C%2C%2023%20%D1%81%D1%96%D1%87%D0%BD%D1%8F%2C%202024%20%C2%A9%20%20European%20Union.jpg"><p><strong>欧盟委员会副主席周四表示，欧盟看到有迹象表明中国正在向俄罗斯供应可用于制造武器的零部件，并担心如果西方的决心减弱，中国可能会有恃无恐地增加对俄罗斯的供应。        </strong></p><div><p>据路透4月18日华盛顿报道，欧盟委员会执行副主席东布罗夫斯基斯（Valdis Dombrovskis）表示，他与美国国会立法者会面时强调美国批准被拖延已久的援助乌克兰（法案）的重要性。</p><p>美国官员上周向记者们简要介绍了中国向俄罗斯提供的物资--包括无人机和导弹技术、卫星图像和机床，指出这些物资虽不足以达到提供致命武器援助的程度，但却有助于俄罗斯增强军力，支撑其长达两年的乌克兰战争。</p><p>欧盟委员会副主席东布罗夫斯基斯在美国国会外交关系委员会的一次活动上说，欧盟正与美国合作打击逃避对俄罗斯制裁的行为，但他没有透露细节。</p><p>他说，欧盟对中国在乌克兰问题上的行动表示担忧，尤其是最近有迹象表明中国正在向俄罗斯运送零部件。</p><p>他解释道，我们看到中国正在坐观成败，考虑如何利用这种情况为自己谋利。但不幸的是，最近我们也看到有迹象表明中国确实在向俄罗斯供应零部件和各种设备。”</p><p>他称，这些设备涉及军民两用物品，而非真正的武器，但这些行动表明，加强西方支持乌克兰的决心是多么重要。</p><p>中国大使馆发言人表示，中国不是乌克兰危机的一方，中俄之间的正常贸易不应受到干扰或限制。</p><p>美国国务卿安东尼-布林肯周五在G7外长会议上指责中国间接"助长"了在乌克兰的冲突。布林肯说：“中国如果一方面希望与欧洲和其他国家保持友好关系，就不能另一方面助长冷战结束以来对欧洲安全的最大威胁”。</p><p>在意大利卡普里岛举行的G7外长会议周五发布的公报称，他们对中国向俄罗斯转让材料帮助其在乌克兰的战争机器表示"强烈关切"。</p><p>美国国务院发言人本周表示，美国国务卿安东尼-布林肯预计在即将对中国进行的访问中提出类似的关切。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX2t.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E6%25AC%25A7%25E7%259B%259F%25E7%259C%258B%25E5%2588%25B0%25E4%25B8%25AD%25E5%259B%25BD%25E5%2590%2591%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E4%25BE%259B%25E5%25BA%2594%25E5%2586%259B%25E6%25B0%2591%25E4%25B8%25A4%25E7%2594%25A8%25E4%25BA%25A7%25E5%2593%2581%25E7%259A%2584%25E8%25BF%25B9%25E8%25B1%25A1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1%20-%20https%3A%2F%2Frfi.my%2FAX2t.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1%20-%20https%3A%2F%2Frfi.my%2FAX2t.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX2t.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%AC%A7%E7%9B%9F%E7%9C%8B%E5%88%B0%E4%B8%AD%E5%9B%BD%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E4%BE%9B%E5%BA%94%E5%86%9B%E6%B0%91%E4%B8%A4%E7%94%A8%E4%BA%A7%E5%93%81%E7%9A%84%E8%BF%B9%E8%B1%A1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 21:51</div><img src="https://s.rfi.fr/media/display/44663486-fe83-11ee-93e4-005056a90284/w:1280/p:16x9/Capture-2200.JPG"><p><strong>4月19日，中国人民解放军宣布成立信息支援部队，其由中央军委直接领导指挥，撤销原有的战略支援部队番号，相应调整军事航天部队、网络空间部队领导管理关系。战略支援部队成立大会于2015年12月31日举行，该部队成立至今已有逾8年的历史。        </strong></p><div><p>据官媒新华社报导，中国人民解放军信息支援部队成立大会周五在北京八一大楼隆重举行。中共中央总书记、国家主席、中央军委主席习近平向信息支援部队授予军旗并致训词，代表党中央和中央军委向信息支援部队全体官兵致以热烈祝贺。他强调，要贯彻新时代强军思想，贯彻新时代军事战略方针，坚持政治建军、改革强军、科技强军、人才强军、依法治军，聚焦备战打仗，按照体系融合、全域支撑的战略要求，锐意进取，扎实工作，努力建设一支强大的现代化信息支援部队。</p><p>报导提及，习近平在成立大会上将军旗授予信息支援部队司令员毕毅、政治委员李伟。信息支援部队主要领导向习近平敬礼，从习近平手中接过军旗，持旗肃立。全体官兵向军旗庄严敬礼。授旗仪式后，习近平致训词。他指出，调整组建信息支援部队，是党中央和中央军委从强军事业全局出发作出的重大决策，是构建新型军兵种结构布局、完善中国特色现代军事力量体系的战略举措，对加快国防和军队现代化、有效履行新时代人民军队使命任务具有重大而深远的意义。</p><p>报导称，习近平强调，信息支援部队是全新打造的战略性兵种，是统筹网络信息体系建设运用的关键支撑，在推动我军高质量发展和打赢现代战争中地位重要、责任重大。要坚决听党指挥，全面贯彻党对军队绝对领导的根本原则和制度，全面加强部队党的建设，坚定理想信念，严肃纪律规矩，弘扬优良作风，确保部队绝对忠诚、绝对纯洁、绝对可靠。要有力支撑作战，坚持信息主导、联合制胜，畅通信息链路，融合信息资源，加强信息防护，深度融入全军联合作战体系，精准高效实施信息支援，服务保障各方向各领域军事斗争。要加快创新发展，坚持作战需求根本牵引，加强体系统筹，推进共建共享，强化科技创新，建设符合现代战争要求、具有我军特色的网络信息体系，高质量推动体系作战能力加速提升。</p><p>成立大会上，中共中央政治局委员、中央军委副主席张又侠宣读了习近平签发的中央军委关于组建信息支援部队的命令、信息支援部队领导班子成员任职命令和党委常委会组成通知，中共中央政治局委员、中央军委副主席何卫东主持大会。报导指，根据中央军委决定，新组建的信息支援部队由中央军委直接领导指挥，同时撤销战略支援部队番号，相应调整军事航天部队、网络空间部队领导管理关系。</p><p>此外，中国国防部新闻发言人吴谦周五晚在出席专题新闻发布会上介绍称，“调整组建信息支援部队，是党中央和中央军委从强军事业全局出发作出的重大决策，是构建新型军兵种结构布局、完善中国特色现代军事力量体系的战略举措，对加快国防和军队现代化、有效履行新时代人民军队使命任务具有重大而深远的意义。信息支援部队是全新打造的战略性兵种，是统筹网络信息体系建设运用的关键支撑，在推动我军高质量发展和打赢现代战争中地位重要、责任重大”。</p><p>就“构建新型军兵种结构布局”情况，吴谦指出：“这次改革后，中国人民解放军总体形成中央军委领导指挥下的陆军、海军、空军、火箭军等军种，军事航天部队、网络空间部队、信息支援部队、联勤保障部队等兵种的新型军兵种结构布局。随着形势任务的发展，我们将不断完善中国特色军事力量体系”。</p><p>就“军事航天部队担负什么任务”的提问，吴谦表示：“推进军事航天部队建设，对提高安全进出和开放利用太空能力、增强太空危机管控和综合治理效能、更好和平利用太空具有重要意义。中方的太空政策清晰明确，我们一向坚持和平利用太空，愿同所有和平利用太空的国家一道，加强交流、深化合作、为维护太空持久和平与共同安全作出贡献”。</p><p>就“网络空间部队担负什么任务”的提问，吴谦说：“推进网络空间部队建设，大力发展网络安全防御手段，对筑牢国家网络边防，及时发现和抵御网络入侵，捍卫国家网络主权和信息安全具有重要意义”。他续称：“我们积极倡导建设和平、安全、开放、合作的网络空间，致力于同国际社会一道共同构建网络命运共同体”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4j.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-%25E8%25A7%25A3%25E6%2594%25BE%25E5%2586%259B%25E6%2588%2590%25E7%25AB%258B%25E4%25BF%25A1%25E6%2581%25AF%25E6%2594%25AF%25E6%258F%25B4%25E9%2583%25A8%25E9%2598%259F-%25E6%2592%25A4%25E9%2594%2580%25E6%2588%2598%25E7%2595%25A5%25E6%2594%25AF%25E6%258F%25B4%25E9%2583%25A8%25E9%2598%259F%25E7%2595%25AA%25E5%258F%25B7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%A3%E6%94%BE%E5%86%9B%E6%88%90%E7%AB%8B%E4%BF%A1%E6%81%AF%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%20%E6%92%A4%E9%94%80%E6%88%98%E7%95%A5%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%E7%95%AA%E5%8F%B7%20-%20https%3A%2F%2Frfi.my%2FAX4j.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%A3%E6%94%BE%E5%86%9B%E6%88%90%E7%AB%8B%E4%BF%A1%E6%81%AF%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%20%E6%92%A4%E9%94%80%E6%88%98%E7%95%A5%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%E7%95%AA%E5%8F%B7%20-%20https%3A%2F%2Frfi.my%2FAX4j.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4j.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%A3%E6%94%BE%E5%86%9B%E6%88%90%E7%AB%8B%E4%BF%A1%E6%81%AF%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%20%E6%92%A4%E9%94%80%E6%88%98%E7%95%A5%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%E7%95%AA%E5%8F%B7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
