--- a/articles/rfi/999983.md
+++ b/articles/rfi/999983.md
@@ -1,5 +1,5 @@
-<!--1713554102000-->
-[岸田文雄：日美关系不会因11月美国总统选举的结果而动摇](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84-%E6%97%A5%E7%BE%8E%E5%85%B3%E7%B3%BB%E4%B8%8D%E4%BC%9A%E5%9B%A011%E6%9C%88%E7%BE%8E%E5%9B%BD%E6%80%BB%E7%BB%9F%E9%80%89%E4%B8%BE%E7%9A%84%E7%BB%93%E6%9E%9C%E8%80%8C%E5%8A%A8%E6%91%87)
+<!--1713586502000-->
+[G7外长声明：台海和平对国际安全繁荣不可或缺](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-g7%E5%A4%96%E9%95%BF%E5%A3%B0%E6%98%8E-%E5%8F%B0%E6%B5%B7%E5%92%8C%E5%B9%B3%E5%AF%B9%E5%9B%BD%E9%99%85%E5%AE%89%E5%85%A8%E7%B9%81%E8%8D%A3%E4%B8%8D%E5%8F%AF%E6%88%96%E7%BC%BA)
 ------
 
-<div>19/04/2024 - 19:38</div><img src="https://s.rfi.fr/media/display/8131e55c-fbf6-11ee-a644-005056a90284/w:1280/p:16x9/2024-04-10T143514Z_1347866304_RC2Q37ADHC0H_RTRMADP_3_USA-JAPAN.JPG"><p><strong>日本首相岸田文雄在19日的日本参院全体会议上发表观点，认为日美关系不会因11月美国总统选举的结果而动摇。他被问及共和党籍前总统特朗普再次当选时如何应对，表示“正在密切关注。对于日美同盟的重要性，不论是民主党还是共和党都存在共识，选举结果不会对日美关系产生影响。”        </strong></p><div><p>共同社报道，关于和美国总统拜登的联合声明中写明完善日企可参与美军舰船等大规模维修的机制，岸田解释称“这有益于提高美军的快速反应力，加强威慑体制，这并非基于和特定国家作战的考量”，寻求理解。</p><p>日本首相岸田文雄4月11日曾在美国国会参众两院联席会议上发表的演讲中主张，中国的对外态度和军事动向“给国际社会整体的和平与稳定带来了迄今为止最大的战略挑战”。他还说，朝鲜向俄罗斯出口弹道导弹，“增加了乌克兰的苦难”。</p><p>岸田表示，日本“作为最亲近的朋友，与美国同在”。他还提及把防卫费提高至占国内生产总值（GDP）2%、拥有反击能力（对敌基地攻击能力）等岸田政府的政策，强调“为巩固日美同盟而带头采取了一系列举措”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX40.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E5%25B2%25B8%25E7%2594%25B0%25E6%2596%2587%25E9%259B%2584-%25E6%2597%25A5%25E7%25BE%258E%25E5%2585%25B3%25E7%25B3%25BB%25E4%25B8%258D%25E4%25BC%259A%25E5%259B%25A011%25E6%259C%2588%25E7%25BE%258E%25E5%259B%25BD%25E6%2580%25BB%25E7%25BB%259F%25E9%2580%2589%25E4%25B8%25BE%25E7%259A%2584%25E7%25BB%2593%25E6%259E%259C%25E8%2580%258C%25E5%258A%25A8%25E6%2591%2587&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%EF%BC%9A%E6%97%A5%E7%BE%8E%E5%85%B3%E7%B3%BB%E4%B8%8D%E4%BC%9A%E5%9B%A011%E6%9C%88%E7%BE%8E%E5%9B%BD%E6%80%BB%E7%BB%9F%E9%80%89%E4%B8%BE%E7%9A%84%E7%BB%93%E6%9E%9C%E8%80%8C%E5%8A%A8%E6%91%87%20-%20https%3A%2F%2Frfi.my%2FAX40.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%EF%BC%9A%E6%97%A5%E7%BE%8E%E5%85%B3%E7%B3%BB%E4%B8%8D%E4%BC%9A%E5%9B%A011%E6%9C%88%E7%BE%8E%E5%9B%BD%E6%80%BB%E7%BB%9F%E9%80%89%E4%B8%BE%E7%9A%84%E7%BB%93%E6%9E%9C%E8%80%8C%E5%8A%A8%E6%91%87%20-%20https%3A%2F%2Frfi.my%2FAX40.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX40.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%EF%BC%9A%E6%97%A5%E7%BE%8E%E5%85%B3%E7%B3%BB%E4%B8%8D%E4%BC%9A%E5%9B%A011%E6%9C%88%E7%BE%8E%E5%9B%BD%E6%80%BB%E7%BB%9F%E9%80%89%E4%B8%BE%E7%9A%84%E7%BB%93%E6%9E%9C%E8%80%8C%E5%8A%A8%E6%91%87&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>19/04/2024 - 23:36</div><img src="https://s.rfi.fr/media/display/e93c5330-fe94-11ee-baca-005056bf30b7/w:1280/p:16x9/2024-04-18T164639Z_978736951_RC2497AQO4K6_RTRMADP_3_G7-ITALY-FOREIGN.JPG"><p><strong>七国集团（G7）外长会议在意大利结束议程后发表声明指出，台海和平稳定对国际社会安全与繁荣至关重要，呼吁以和平方式解决。七国集团外长会议并"强烈关切"中国企业向俄罗斯转移军民两用原材料和可用于制造武器的零组件，这些材料和零件被莫斯科用于军事扩张。        </strong></p><div><p>G7外长会议17至19日在意大利卡普里岛（Capri）举行，G7外长周五在会后发表"应对全球挑战、促进合作伙伴关系"的共同声明。</p><p>在台海议题方面，声明指出，台海和平稳定对国际社会的安全与繁荣不可或缺，呼吁两岸议题必须用和平方式解决。</p><p>中央社援引声明指出，G7成员支持台湾以观察员、或来宾的身份，有意义参与非以国家身份为前提的国际组织，包括世界卫生大会（WHA）、世界卫生组织（WHO）技术会议。声明指出，G7成员对台湾的基本立场没有改变，包括现行的一中政策。</p><p>此外，美国国务卿布林肯在单独召开的记者会上指出，G7成员在台海、南海、朝鲜半岛和平与稳定的立场一致，也团结对抗中国不公平、非市场性的行为。</p><p>布林肯表示，G7成员国都非常关切中国产能过剩的问题，他称，"这些问题使我们的市场充斥大量补贴、因而价格偏低的新产品和技术，不仅逼走我们的企业，他们也企图主导这些市场"。</p><p>此外，七国集团外长周五表示，"强烈关切"中国企业向俄罗斯转移军民两用原材料和可用于制造武器的零组件，这些材料和零件被莫斯科用于军事扩张。</p><p>法新社报导，七国集团外长在会议声明中说："这使俄罗斯能够重建和振兴其国防工业基础，对乌克兰和国际和平与安全构成威胁。中国应确保停止这种支持。"</p><p>此前，欧盟委员会负责贸易政策的副主席东布罗夫斯基斯（Valdis Dombrovskis）在华盛顿表示，欧盟看到有迹象显示中国正在供应可让俄罗斯用于制造武器的零组件，担心如果西方阻止俄罗斯入侵乌克兰的决心削弱，中国可能会扩大交付零组件。</p><p>东布罗夫斯基斯表示，他此行访问华盛顿将会见美国国会议员，以强调批准等候已久的美国军援乌克兰的重要性。</p><p>美国官员上周针对中国正在提供给俄罗斯的零件材料向媒体简报，包括无人机和导弹技术、卫星影像和工具机，这些材料有助于俄罗斯建立其军事力量，使打了两年的俄乌战争得以延续。</p><p>东布罗夫斯基斯在美国智库研究机构"外交关系协会"（Council on Foreign Relations）一场活动上表示，欧盟正在与美国合作打击对俄罗斯制裁的规避行为。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX5K.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-g7%25E5%25A4%2596%25E9%2595%25BF%25E5%25A3%25B0%25E6%2598%258E-%25E5%258F%25B0%25E6%25B5%25B7%25E5%2592%258C%25E5%25B9%25B3%25E5%25AF%25B9%25E5%259B%25BD%25E9%2599%2585%25E5%25AE%2589%25E5%2585%25A8%25E7%25B9%2581%25E8%258D%25A3%25E4%25B8%258D%25E5%258F%25AF%25E6%2588%2596%25E7%25BC%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=G7%E5%A4%96%E9%95%BF%E5%A3%B0%E6%98%8E%EF%BC%9A%E5%8F%B0%E6%B5%B7%E5%92%8C%E5%B9%B3%E5%AF%B9%E5%9B%BD%E9%99%85%E5%AE%89%E5%85%A8%E7%B9%81%E8%8D%A3%E4%B8%8D%E5%8F%AF%E6%88%96%E7%BC%BA%20-%20https%3A%2F%2Frfi.my%2FAX5K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=G7%E5%A4%96%E9%95%BF%E5%A3%B0%E6%98%8E%EF%BC%9A%E5%8F%B0%E6%B5%B7%E5%92%8C%E5%B9%B3%E5%AF%B9%E5%9B%BD%E9%99%85%E5%AE%89%E5%85%A8%E7%B9%81%E8%8D%A3%E4%B8%8D%E5%8F%AF%E6%88%96%E7%BC%BA%20-%20https%3A%2F%2Frfi.my%2FAX5K.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX5K.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=G7%E5%A4%96%E9%95%BF%E5%A3%B0%E6%98%8E%EF%BC%9A%E5%8F%B0%E6%B5%B7%E5%92%8C%E5%B9%B3%E5%AF%B9%E5%9B%BD%E9%99%85%E5%AE%89%E5%85%A8%E7%B9%81%E8%8D%A3%E4%B8%8D%E5%8F%AF%E6%88%96%E7%BC%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
