--- a/articles/rfi/999984.md
+++ b/articles/rfi/999984.md
@@ -1,5 +1,5 @@
-<!--1713554102000-->
-[肯尼亚悼空难殉职的军方首长](https://www.rfi.fr/cn/%E9%9D%9E%E6%B4%B2/20240419-rfi-%E6%B3%95%E5%B9%BF-%E5%B0%BC%E5%8F%A4%E6%8B%89-%E9%9D%9E%E6%B4%B2-%E8%82%AF%E5%B0%BC%E4%BA%9A%E6%82%BC%E7%A9%BA%E9%9A%BE%E6%AE%89%E8%81%8C%E7%9A%84%E5%86%9B%E6%96%B9%E9%A6%96%E9%95%BF)
+<!--1713586502000-->
+[马克龙会晤黎巴嫩总理称：将努力防止黎以之间暴力升级](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-%E9%A9%AC%E5%85%8B%E9%BE%99%E4%BC%9A%E6%99%A4%E9%BB%8E%E5%B7%B4%E5%AB%A9%E6%80%BB%E7%90%86%E7%A7%B0-%E5%B0%86%E5%8A%AA%E5%8A%9B%E9%98%B2%E6%AD%A2%E9%BB%8E%E4%BB%A5%E4%B9%8B%E9%97%B4%E6%9A%B4%E5%8A%9B%E5%8D%87%E7%BA%A7)
 ------
 
-<div>19/04/2024 - 20:00</div><img src="https://s.rfi.fr/media/display/bbae6010-124f-11ea-a046-005056bf7c53/w:1280/p:16x9/Kenya%20copie_0.png"><p><strong>东非国家肯尼亚的军方首长于当地时间周四（2024年04月18日）下午在视察部队剿匪行动的途中，因直升飞机坠落殉职。肯尼亚官方宣布，从今天（2024年04月19日）星期五开始哀悼三天。        </strong></p><div><p> </p><p><strong>-- 肯尼亚军方突然群龙无首 -</strong></p><p>在东非地区，肯尼亚总统威廉·鲁托(Président William Ruto)沉重宣布，该国军方首长弗朗西斯·奥格拉将军（Gr. Francis Omondi Ogolla）已于昨天星期四（2024年04月18日）在一次直升飞机的坠机事故中遇难。</p><a href="https://www.rfi.fr/fr/tag/kenya/"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/1bdee5cc-fdb0-11ee-93d5-005056bfb2b6/2024-04-18T165501Z_171099255_RC2AS0A2H0V8_RTRMADP_3_KENYA-CRASH.webp 2480w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/1bdee5cc-fdb0-11ee-93d5-005056bfb2b6/2024-04-18T165501Z_171099255_RC2AS0A2H0V8_RTRMADP_3_KENYA-CRASH.JPG" alt="Rais wa Kenya William Ruto wakati akiwa na mkuu wa majeshi ya ulinzi ya Kenya, Francis Ogolla jijini Nairobi." srcset="https://s.rfi.fr/media/display/1bdee5cc-fdb0-11ee-93d5-005056bfb2b6/2024-04-18T165501Z_171099255_RC2AS0A2H0V8_RTRMADP_3_KENYA-CRASH.JPG 2480w"sizes=""width="2480"height="1681"loading="lazy"></picture><figcaption><span>存档图片 / 肯尼亚总统威廉·鲁托(Président William Ruto)与该国军方首长弗朗西斯·奥格拉将军（Gr. Francis Omondi Ogolla）。Image Archive / Afrique : Kenya a entamé ce vendredi 19 avril 2024 trois jours de deuil national après la mort dans un accident d&#039;hélicoptère de son chef des armées et de neuf hauts responsables militaires. Ici, photo du Président William RUTO et le chef des armées : Gr. Francis Ogolla.</span>                <span>REUTERS - Monicah Mwangi / RFI Image Archive</span>            </figcaption></figure></a><p>据本台法广（RFI）法文网报导，肯尼亚军方首长已于昨天（2024年04月18日星期四）在该国西部地区发生的一起直升飞机的空难事故中死亡。肯尼亚总统威廉·鲁托(Président William Ruto)于周四晚些时候，在召集了一次紧急安全会议后沉重地告诉媒体，当地时间当天14点20分（国际标准时间11点20分），该国军方首长于在Sindar地区的一起空难事故中遇难。事发时，直升飞机上还有另外11名军人，其中9人同时遇难，只有2人生还。</p><p><strong>-- 肯尼亚当局悲痛哀悼三日 -</strong></p><p><a href="https://www.rfi.fr/tw/關鍵詞/肯尼亞/" target="_self">肯尼亚</a>为此将进行隆重的哀悼，历时三天。据介绍，地方地区距离首都内罗毕（Nairobi）400多公里。肯尼亚军方正在这一地区打击帮派份子。军方首长乘坐直升飞机前往那里是为了视察正在开展军事行动的部队。这一军事行动的名称，把当地的斯瓦希利语（swahili）翻译为中文是“终结罪行”（mettre fin à la criminalité）。</p><a href="https://www.rfi.fr/fr/tag/kenya/"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/1853e1d2-14ad-11ea-959f-005056bf7c53/Kenya%20copie_0.webp 886w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/1853e1d2-14ad-11ea-959f-005056bf7c53/Kenya%20copie_0.png" alt="RFI Carte archive / Afrique : le Kenya. Ici, une carte du Kenya.存档地图 / 非洲国家：肯尼亚。" srcset="https://s.rfi.fr/media/display/1853e1d2-14ad-11ea-959f-005056bf7c53/Kenya%20copie_0.png 886w"sizes=""width="886"height="591"loading="lazy"></picture><figcaption><span>RFI Carte archive / Afrique : le Kenya. Ici, une carte du Kenya.存档地图 / 非洲国家：肯尼亚。</span>                <span>Carte / RFI</span>            </figcaption></figure></a><p>（ 翻译和编辑：法广 <strong><a href="https://www.rfi.fr/fr/" target="_self">RFI</a> </strong>电台 <strong><a href="https://www.rfi.fr/tw/作者/尼古拉/" target="_self">尼古拉</a> </strong>）</p><p>~. <a href="https://www.rfi.fr/cn/作者/尼古拉/" target="_self"><strong>Fin</strong></a> .~</p><div><div>非洲时事 - 肯尼亚悼念空难殉职的军方首长</div><div><div><script data-media-id="WBMZ109326-RFI-CN-20240419" type="application/json">{"isEm":true,"mediaId":"WBMZ109326-RFI-CN-20240419","sources":[{"name":"WBMZ109326-RFI-CN-20240419","url":"https:\/\/aod-rfi.akamaized.net\/rfi\/chinois\/audio\/modules\/actu\/202404\/Papier_DESK_19_04_2024_lundi_Nicolas_jour_Afrique_-_Kenya_-_le_chef_4_19_2024-10.mp3"}],"broadcastType":"replay","emission":{"title":"\u975e\u6d32\u65f6\u4e8b - \u80af\u5c3c\u4e9a\u60bc\u5ff5\u7a7a\u96be\u6b89\u804c\u7684\u519b\u65b9\u9996\u957f"},"diffusion":{"title":"_Papier DESK 19.04.2024 lundi Nicolas jour Afrique - Kenya - le chef des arm\u00e9es mort dans un crash lors une op\u00e9ration","image":""}}</script><divdata-root-audio-player-button    data-short-lived-vue-app><play-mediav-bind:current-media="mediaId"v-bind:is-player-playing="isPlayerPlaying"media-id="WBMZ109326-RFI-CN-20240419"v-on:emitted-click="playOrPause"classes="a-picto-play-pause"play-pause-page-url="":smaller-icons="false":add-editions-automatically="false":is-live="false"data-label=""><template #play><span><div><div></div><div></div></div></span></template><template #pause><span></span></template></play-media></div><div>01:13</div>        </div><div><p>_Papier DESK 19.04.2024 lundi Nicolas jour Afrique - Kenya - le chef des armées mort dans un crash lors une opération</p><span>尼古拉</span></div></div></div><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4C.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%259D%259E%25E6%25B4%25B2%2F20240419-rfi-%25E6%25B3%2595%25E5%25B9%25BF-%25E5%25B0%25BC%25E5%258F%25A4%25E6%258B%2589-%25E9%259D%259E%25E6%25B4%25B2-%25E8%2582%25AF%25E5%25B0%25BC%25E4%25BA%259A%25E6%2582%25BC%25E7%25A9%25BA%25E9%259A%25BE%25E6%25AE%2589%25E8%2581%258C%25E7%259A%2584%25E5%2586%259B%25E6%2596%25B9%25E9%25A6%2596%25E9%2595%25BF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%82%AF%E5%B0%BC%E4%BA%9A%E6%82%BC%E7%A9%BA%E9%9A%BE%E6%AE%89%E8%81%8C%E7%9A%84%E5%86%9B%E6%96%B9%E9%A6%96%E9%95%BF%20-%20https%3A%2F%2Frfi.my%2FAX4C.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%82%AF%E5%B0%BC%E4%BA%9A%E6%82%BC%E7%A9%BA%E9%9A%BE%E6%AE%89%E8%81%8C%E7%9A%84%E5%86%9B%E6%96%B9%E9%A6%96%E9%95%BF%20-%20https%3A%2F%2Frfi.my%2FAX4C.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4C.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%82%AF%E5%B0%BC%E4%BA%9A%E6%82%BC%E7%A9%BA%E9%9A%BE%E6%AE%89%E8%81%8C%E7%9A%84%E5%86%9B%E6%96%B9%E9%A6%96%E9%95%BF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>19/04/2024 - 23:30</div><img src="https://s.rfi.fr/media/display/fc2f3c92-fe93-11ee-8d7c-005056bf30b7/w:1280/p:16x9/2024-04-19T110206Z_1497783755_RC2M97A95C26_RTRMADP_3_FRANCE-LEBANON.JPG"><p><strong>法国总统马克龙周五(4月19日）在巴黎会见黎巴嫩总理米卡提，马克龙表示：“法国将尽一切努力防止黎巴嫩和以色列之间暴力局势升级”。        </strong></p><div><p>法新社报道，法国总统府爱丽舍宫周五在一份新闻稿中称，马克龙周五在巴黎会晤黎巴嫩总理米卡提及黎巴嫩陆军总司令奥恩，马克龙并表示，法国将继续向黎巴嫩武装部队提供支持。</p><p>据爱丽舍宫新闻稿称，马克龙将继续为黎巴嫩的稳定采取行动，使其免受中东紧张局势升级带来的风险”。 马克龙并重申了法国在联合国驻黎巴嫩临时部队（联黎部队）中的承诺，并强调了各国应履行的职责。</p><p>根据周三和周四在布鲁塞尔举行的欧洲理事会特别会议做出的决定，法国将与所有准备好更多参与的国家，特别是其欧洲伙伴一起共同努力”。</p><p>马克龙并与黎巴嫩议会议长纳比·贝里通了电话，马克龙再次呼吁“政治领导人致力于寻求摆脱正在削弱黎巴嫩制度危机的出路”。</p><p>自米歇尔·奥恩（Michel Aoun）总统于 2022 年 10 月 31 日任期结束后，黎巴嫩议会一直难以就其继任者达成一致，势力强大、获伊朗支持的"真主党"（Hezbollah）与对手之间的分歧导致议会陷入分裂。</p><p>马克龙预计很快将与其他黎巴嫩政治人物展开会谈，马克龙已要求他的个人特使、前外交部长勒德里昂继续为此进行努力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX5H.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-%25E9%25A9%25AC%25E5%2585%258B%25E9%25BE%2599%25E4%25BC%259A%25E6%2599%25A4%25E9%25BB%258E%25E5%25B7%25B4%25E5%25AB%25A9%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0-%25E5%25B0%2586%25E5%258A%25AA%25E5%258A%259B%25E9%2598%25B2%25E6%25AD%25A2%25E9%25BB%258E%25E4%25BB%25A5%25E4%25B9%258B%25E9%2597%25B4%25E6%259A%25B4%25E5%258A%259B%25E5%258D%2587%25E7%25BA%25A7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E4%BC%9A%E6%99%A4%E9%BB%8E%E5%B7%B4%E5%AB%A9%E6%80%BB%E7%90%86%E7%A7%B0%EF%BC%9A%E5%B0%86%E5%8A%AA%E5%8A%9B%E9%98%B2%E6%AD%A2%E9%BB%8E%E4%BB%A5%E4%B9%8B%E9%97%B4%E6%9A%B4%E5%8A%9B%E5%8D%87%E7%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAX5H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%A9%AC%E5%85%8B%E9%BE%99%E4%BC%9A%E6%99%A4%E9%BB%8E%E5%B7%B4%E5%AB%A9%E6%80%BB%E7%90%86%E7%A7%B0%EF%BC%9A%E5%B0%86%E5%8A%AA%E5%8A%9B%E9%98%B2%E6%AD%A2%E9%BB%8E%E4%BB%A5%E4%B9%8B%E9%97%B4%E6%9A%B4%E5%8A%9B%E5%8D%87%E7%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAX5H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX5H.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%A9%AC%E5%85%8B%E9%BE%99%E4%BC%9A%E6%99%A4%E9%BB%8E%E5%B7%B4%E5%AB%A9%E6%80%BB%E7%90%86%E7%A7%B0%EF%BC%9A%E5%B0%86%E5%8A%AA%E5%8A%9B%E9%98%B2%E6%AD%A2%E9%BB%8E%E4%BB%A5%E4%B9%8B%E9%97%B4%E6%9A%B4%E5%8A%9B%E5%8D%87%E7%BA%A7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
