--- a/articles/rfi/999985.md
+++ b/articles/rfi/999985.md
@@ -1,5 +1,5 @@
-<!--1713554102000-->
-[第77届戛纳电影节官方海报致敬黑泽明 在紧张时局背景下呼唤团结](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240419-%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%E5%AE%98%E6%96%B9%E6%B5%B7%E6%8A%A5%E8%87%B4%E6%95%AC%E9%BB%91%E6%B3%BD%E6%98%8E-%E5%9C%A8%E7%B4%A7%E5%BC%A0%E6%97%B6%E5%B1%80%E8%83%8C%E6%99%AF%E4%B8%8B%E5%91%BC%E5%94%A4%E5%9B%A2%E7%BB%93)
+<!--1713586502000-->
+[应网信办要求 苹果从中国应用商店下架WhatsApp和Threads](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82-%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6whatsapp%E5%92%8Cthreads)
 ------
 
-<div>19/04/2024 - 19:34</div><img src="https://s.rfi.fr/media/display/ebe59fdc-fe72-11ee-bc3f-005056a97e36/w:1280/p:16x9/Capture-2199.PNG"><p><strong>第77届戛纳电影节官方海报刚刚在本周五（4月19日）揭晓。海报取自日本著名导演黑泽明的电影《八月狂想曲》中的一幅画面，《八月狂想曲》曾在1991年的戛纳电影节上放映。        </strong></p><div><p>这是一幅充满诗意的美好画面：远山背景映衬，在柔和的月光下并排而坐的五人仰头遥视，电影中当空的月亮在这里被换成了电影节的标志：金棕榈。整个画面色调幽蓝，柔和静谧。第77届戛纳电影节即将在今年 5月14 日至25日举行。报道指，电影节以《八月狂想曲》影片画面作为海报，是在现今紧张的国际地缘政治背景下发出的团结呼吁。</p><p>这也是对日本杰出导演黑泽明的致敬，有“电影界的莎士比亚”之誉的黑泽明是日本电影最具国际影响力的导演和编剧之一，在近六十年的电影生涯中创作了《罗生门》、《七武士》、《大镖客》、《天国与地狱》、《影武者》、《乱》等代表作。 《八月狂想曲》是他生前执导的倒数第二部影片，1991年当该片在戛纳电影节上展映时黑泽明已81岁。该片呼吁人们的团结，强调寻求万物和谐的重要意义。</p><p>在《八月狂想曲》中，一位祖母是1945年8月9日长崎原子弹爆炸的受害，她向她的孙子和美国侄子传递了她对爱和正直的信念，以此作为对战争的对抗。影片充满了沉思和温柔。</p><p>戛纳电影节在声明中写道，“作为电影的一面镜子，这幅海报以特有的方式致敬第七艺术：电影让每个人都有发言权，所以它能够解放思想；电影铭记伤痛，所以它是对遗忘的对抗；电影见证了危险，所以它呼唤团结；电影抚平创伤，所以它帮助了生命的修复。”</p><p>声明说，在这个脆弱的世界，人们不断质疑他人的存在，戛纳电影节重申了这样一个信念：即电影是表达和分享的世界圣地，这里书写着我们的人性和自由。</p><p>报道指，继去年戛纳电影节以凯瑟琳·德纳芙的形象、2021 年斯派克·李以及 2018 年让-保罗·贝尔蒙多和安娜·卡琳娜的形象作为电影节海报之后，今年的戛纳又回到了具有强烈象征意义的标志性电影场景作为官方海报。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX3u.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240419-%25E7%25AC%25AC77%25E5%25B1%258A%25E6%2588%259B%25E7%25BA%25B3%25E7%2594%25B5%25E5%25BD%25B1%25E8%258A%2582%25E5%25AE%2598%25E6%2596%25B9%25E6%25B5%25B7%25E6%258A%25A5%25E8%2587%25B4%25E6%2595%25AC%25E9%25BB%2591%25E6%25B3%25BD%25E6%2598%258E-%25E5%259C%25A8%25E7%25B4%25A7%25E5%25BC%25A0%25E6%2597%25B6%25E5%25B1%2580%25E8%2583%258C%25E6%2599%25AF%25E4%25B8%258B%25E5%2591%25BC%25E5%2594%25A4%25E5%259B%25A2%25E7%25BB%2593&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%E5%AE%98%E6%96%B9%E6%B5%B7%E6%8A%A5%E8%87%B4%E6%95%AC%E9%BB%91%E6%B3%BD%E6%98%8E%20%E5%9C%A8%E7%B4%A7%E5%BC%A0%E6%97%B6%E5%B1%80%E8%83%8C%E6%99%AF%E4%B8%8B%E5%91%BC%E5%94%A4%E5%9B%A2%E7%BB%93%20-%20https%3A%2F%2Frfi.my%2FAX3u.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%E5%AE%98%E6%96%B9%E6%B5%B7%E6%8A%A5%E8%87%B4%E6%95%AC%E9%BB%91%E6%B3%BD%E6%98%8E%20%E5%9C%A8%E7%B4%A7%E5%BC%A0%E6%97%B6%E5%B1%80%E8%83%8C%E6%99%AF%E4%B8%8B%E5%91%BC%E5%94%A4%E5%9B%A2%E7%BB%93%20-%20https%3A%2F%2Frfi.my%2FAX3u.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX3u.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%E5%AE%98%E6%96%B9%E6%B5%B7%E6%8A%A5%E8%87%B4%E6%95%AC%E9%BB%91%E6%B3%BD%E6%98%8E%20%E5%9C%A8%E7%B4%A7%E5%BC%A0%E6%97%B6%E5%B1%80%E8%83%8C%E6%99%AF%E4%B8%8B%E5%91%BC%E5%94%A4%E5%9B%A2%E7%BB%93&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 22:27</div><img src="https://s.rfi.fr/media/display/ba5e9202-e847-11ee-9d09-005056a90284/w:1280/p:16x9/AP24082277039710.jpg"><p><strong>苹果公司4月19日表示，已将Meta公司旗下的应用程序WhatsApp和Threads从其在中国的应用商店下架，原因是中国政府以国家安全为由下令下架。        </strong></p><div><p>路透社报导指，根据应用程序跟踪公司七麦数据和AppMagic的数据，Telegram和Signal这两款外国通信应用程序也于周五被下架。这四款应用程序的下架表明，中央政府至少对一些不受其控制的外国在线信息服务越来越不能容忍。这也预示着苹果在中国的回旋余地越来越小。</p><p>尽管如此，根据路透社周五的查看，包括Facebook、Instagram和Messenger在内的其他Meta公司旗下的应用程序仍可下载。由西方公司开发的许多其他流行应用程序，包括YouTube和X（原推特），也可以下载。目前尚不清楚WhatsApp或Threads如何引起中国当局的安全担忧。</p><p>苹果公司在一封电子邮件声明中说：“基于他们的国家安全考虑，国家互联网信息办公室下令从中国店面下架这些应用程序”。该声明说：“我们有义务遵守我们运营所在国家的法律，即使我们有不同意见”。Meta公司拒绝发表评论，并将询问转给了苹果公司。</p><p>苹果公司没有回应就Signal和Telegram发表评论的请求。这两家通信应用程序公司的代表没有立即回复路透社的置评请求。国家互联网信息办公室也没有立即回复置评请求。</p><p>上述四款应用程序在中国都没有被广泛使用，腾讯的微信是目前在华最主要的通信服务应用。这些应用程序和许多外国应用程序在中国网络上通常被防火墙屏蔽，只能通过VPN或其他代理工具使用。</p><p>这四款应用程序在香港和澳门仍然可用。一些中国科技行业的专家说，政府对WhatsApp和Threads下达的命令可能与去年8月的一项新规定有关，该规定要求所有在中国上市的应用程序都必须向政府注册，否则将面临被下架的风险。公司完成注册的截止日期是3月底，该规定于4月1日生效。</p><p>苹果公司曾从中国应用商店下架过应用程序。2017年，苹果下架了《纽约时报》的新闻应用程序，称其违反了当地法规，此举正值世界第二大经济体新闻审查制度不断加强之际。该应用在苹果中国应用商店仍无法下载。去年，当中国政府正在制定有关人工智能生成服务的地方法规时，苹果下架了一些类似于ChatGPT的应用程序。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4u.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-%25E5%25BA%2594%25E7%25BD%2591%25E4%25BF%25A1%25E5%258A%259E%25E8%25A6%2581%25E6%25B1%2582-%25E8%258B%25B9%25E6%259E%259C%25E4%25BB%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%25BA%2594%25E7%2594%25A8%25E5%2595%2586%25E5%25BA%2597%25E4%25B8%258B%25E6%259E%25B6whatsapp%25E5%2592%258Cthreads&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82%20%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6WhatsApp%E5%92%8CThreads%20-%20https%3A%2F%2Frfi.my%2FAX4u.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82%20%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6WhatsApp%E5%92%8CThreads%20-%20https%3A%2F%2Frfi.my%2FAX4u.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4u.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%BA%94%E7%BD%91%E4%BF%A1%E5%8A%9E%E8%A6%81%E6%B1%82%20%E8%8B%B9%E6%9E%9C%E4%BB%8E%E4%B8%AD%E5%9B%BD%E5%BA%94%E7%94%A8%E5%95%86%E5%BA%97%E4%B8%8B%E6%9E%B6WhatsApp%E5%92%8CThreads&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
