--- a/articles/rfi/999986.md
+++ b/articles/rfi/999986.md
@@ -1,5 +1,5 @@
-<!--1713554102000-->
-[法新社：奇瑞落户西班牙 中国加强在欧洲汽车市场攻势](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240419-%E6%B3%95%E6%96%B0%E7%A4%BE-%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99-%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E7%9A%84%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF)
+<!--1713584702000-->
+[950亿美元的对外援助计划接近在美众议院通关](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-950%E4%BA%BF%E7%BE%8E%E5%85%83%E7%9A%84%E5%AF%B9%E5%A4%96%E6%8F%B4%E5%8A%A9%E8%AE%A1%E5%88%92%E6%8E%A5%E8%BF%91%E5%9C%A8%E7%BE%8E%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E5%85%B3)
 ------
 
-<div>19/04/2024 - 18:55</div><img src="https://s.rfi.fr/media/display/07351c08-fe65-11ee-9c32-005056bf30b7/w:1280/p:16x9/2024-04-19T092252Z_1078934132_RC2L97AGGKWG_RTRMADP_3_AUTOS-SPAIN-CHERY.JPG"><p><strong>中国汽车制造商奇瑞（Chery）周五 (4月19号) 正式宣布进驻西班牙，计划到 2024 年底将主要生产电动汽车。法新社报道称，这再次表明了中国政府在欧洲市场的雄心壮志。据专家称，在欧洲本土设厂将使中国集团能够规避布鲁塞尔可能对汽车进口征收的关税，并更有效地融入欧洲大陆市场。        </strong></p><div><p>报道称，奇瑞汽车以生产低成本汽车著称，是继今年 2 月宣布在匈牙利建设首个欧洲工厂的汽车业巨头比亚迪之后，第二个宣布在欧洲建立工厂的中国品牌。不过，比亚迪工厂还要三年才能投产。</p><p>奇瑞工厂于本周二已经宣布，原则上将成为与西班牙EBRO-EV 汽车公司的合资企业的一部分，该公司是一家专门生产电动皮卡的集团，其前身是一个于 1987 年消失的卡车和面包车品牌。</p><p> 该合资企业由 Ebro-EV Motors 持有多数股权，将设在 2021 年关闭的巴塞罗那前日产工厂。双方在周五的新闻发布会上表示，合资公司将创造 "1250 个就业岗位"，其中 "150 个将在未来几个月内创造"。</p><p>日产在巴塞罗那的工厂有 3000 名员工，2021 年部分出售给摩托车制造商 Silence 和 Ebro-EV Motors。但马德里与西班牙集团一起，正在寻找一个工业合作伙伴来重新启动该工厂。</p><p><strong>规避关税 占据市场</strong></p><p>法新社称，奇瑞的决定证实了西班牙在汽车行业的领先地位。根据欧洲汽车制造商协会的数据，去年西班牙组装了 187万辆汽车，是欧洲第二大汽车生产国，仅次于德国（396万辆）。</p><p>这次中国与西班牙汽车领域的合作正值北京和布鲁塞尔之间商业关系紧张的背景下，今年 9 月，布鲁塞尔对中国政府向电动汽车行业提供的公共补贴展开了调查，并指责这些补贴扭曲了竞争。</p><p>欧盟委员会表示，这些补贴被用来显示 "人为的低价"，欧盟委员会可能会对中国汽车征收惩罚性关税，从而有可能引发与中国政府的贸易战。</p><p>据专家称，在欧洲本土设厂将使中国集团能够规避布鲁塞尔可能对汽车进口征收的关税，并更有效地融入欧洲大陆市场。</p><p> 近年来，中国电动汽车市场异常活跃，涌现出了比亚迪，极氪、深蓝和长城等数十个本土品牌，它们正在与特斯拉和其他外国制造商展开竞争。</p><p>   其中一些品牌正试图加强其在欧洲的影响力，有些已经在欧洲设立了销售网点和研发中心。它们正在抱怨所面临的障碍，声称这些障碍是在欧洲现有汽车制造商的授意下设置的。</p><p><strong>"再工业化进程的象征"</strong></p><p> 根据周五在西班牙首相佩德罗-桑切斯和奇瑞副董事长张贵兵见证下正式签署的协议条款，中国集团将在未来几个月内利用现有基础设施，开始组装基于其欧姆达 5 车型的内燃和电动汽车。</p><p>从 2024 年第四季度起，还将生产以 Ebro 品牌销售的电动 SUV。奇瑞和EBRO在新闻稿中表示，他们将在2027年实现 "5万辆 "的总产量，并在2029年实现 "15万辆 "的总产量。</p><p>奇瑞汽车股份有限公司副总经理兼国际公司总经理张贵兵当天表示，“我们将为当地人创造数千个就业岗位，并逐步构建整车及其零部件产业园。在具备一定规模之后，进一步出口到欧盟和其他国家。我们希望这个Ebro能够成为奇瑞埃布罗合作后主要生产和出口基地。”</p><p> 佩德罗-桑切斯在讲话中对这一 "将创造财富 "和 "就业机会 "的项目表示满意，认为奇瑞和埃布罗的宣布是 "整个西班牙 "正在进行的 "再工业化进程的象征"。</p><p> 奇瑞成立于1997年，是一家国有企业。该品牌声称到 2023 年将售出188万辆汽车，15年前在中国非常受欢迎，尤其是针对当地市场推出的小型汽油城市汽车。</p><p>奇瑞还不是中国最受欢迎的电动汽车制造商之一，但它已开始向这一细分市场和高端电动汽车领域进军。它是世界领先的中国汽车出口企业（到2023年出口了937,000辆）。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX3V.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240419-%25E6%25B3%2595%25E6%2596%25B0%25E7%25A4%25BE-%25E5%25A5%2587%25E7%2591%259E%25E8%2590%25BD%25E6%2588%25B7%25E8%25A5%25BF%25E7%258F%25AD%25E7%2589%2599-%25E4%25B8%25AD%25E5%259B%25BD%25E5%258A%25A0%25E5%25BC%25BA%25E5%259C%25A8%25E6%25AC%25A7%25E6%25B4%25B2%25E7%259A%2584%25E6%25B1%25BD%25E8%25BD%25A6%25E5%25B8%2582%25E5%259C%25BA%25E6%2594%25BB%25E5%258A%25BF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%95%E6%96%B0%E7%A4%BE%EF%BC%9A%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99%20%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF%20-%20https%3A%2F%2Frfi.my%2FAX3V.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%95%E6%96%B0%E7%A4%BE%EF%BC%9A%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99%20%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF%20-%20https%3A%2F%2Frfi.my%2FAX3V.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX3V.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%95%E6%96%B0%E7%A4%BE%EF%BC%9A%E5%A5%87%E7%91%9E%E8%90%BD%E6%88%B7%E8%A5%BF%E7%8F%AD%E7%89%99%20%E4%B8%AD%E5%9B%BD%E5%8A%A0%E5%BC%BA%E5%9C%A8%E6%AC%A7%E6%B4%B2%E6%B1%BD%E8%BD%A6%E5%B8%82%E5%9C%BA%E6%94%BB%E5%8A%BF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 19:38</div><img src="https://s.rfi.fr/media/display/66235d9c-fe6f-11ee-9bc6-005056a90284/w:1280/p:16x9/AP24110587692992.jpg"><p><strong>4月19日，美国国会众议院以罕见的两党势头推进了一项总额为950亿美元的对外援助计划，该计划将用于乌克兰、以色列、台湾及人道主义援助，一个强大的议员联盟帮助该计划扫清了程序性障碍，以便在周六进行最终投票。周五的投票在通常党争严重的众议院产生了罕见的结果，民主党人帮助共和党籍议长约翰逊（Mike Johnson）的计划以316票对94票的压倒性优势获得通过。众议院可能在本周末最终批准该计划，届时其将被送交参议院。        </strong></p><div><p>这是约翰逊在为该项立法苦恼了两个月后于本周启动的战略的胜利。尽管如此，约翰逊在过去的24小时里仍不得不在美国保守派媒体上四处呼吁，努力挽回对追加援助的支持，尤其是在乌克兰面临与俄罗斯交战的关键时刻，同时也是为了他自己的议长席位，因为将他赶下议长宝座的呼声在共和党极右翼议员中越来越高。</p><p>约翰逊对保守派广播节目《马克·莱文秀》说：“关于我们在这里做什么以及为什么做，有很多误传”。约翰逊补充说，“乌克兰人现在迫切需要致命援助……我们不能允许普京横扫占领另一个国家”，并指“这些都是非常严重的问题，具有全球性影响”。</p><p>经过几个月的拖延，约翰逊本周下定决心继续推进该立法计划后，众议院缓慢而慎重地开展工作。拜登总统迅速对约翰逊议长的计划表示支持，而共和党总统候选人特朗普也罕见地没有破坏约翰逊的工作。白宫在一份声明中说：“全世界都在关注国会的行动。通过这项立法将发出一个强有力的信息，表明美国在关键时刻的领导力”。</p><p>周四晚些时候，众议院规则委员会成员联手进行了一次极为罕见的投票，在接近午夜的投票中，四位民主党人在程序性步骤上给予了支持，以9票对3票的表决结果，击败了该委员会共和党占多数的三位强硬派，将这一方案送入众议院进行辩论。这是众议院近期从未有过的时刻。</p><p>众议院民主党领袖杰弗里斯（Hakeem Jeffries）在投票后说：“我们早就应该支持我们的民主盟友了，众议院民主党人再次为对美国人民很重要的立法扫清了障碍”。周五，约翰逊将需要再次依靠民主党人通过下一轮程序性投票，否决共和党人提出的可能会扼杀该方案的修正案。极右翼共和党籍众议员泰勒·格林（Marjorie Taylor Greene）提出的一项修正案将把用于乌克兰的开支降至零。</p><p>泰勒·格林提出了一项“罢免议长职务”的动议，该动议周五吸引了另一位支持者，亚利桑那州共和党籍众议员戈萨（Paul Gosar）成为该动议的共同提案人。另一位共同提案人、肯塔基州共和党籍众议员马西（Thomas Massie）表示，在下周众议院休会前，可能会有其他议员加入。</p><p>由于众议院的多数党——共和党占优席位是近代以来最稀少的，这种态势将约翰逊推向了民主党人的怀抱。由于没有共和党多数的全力支持，约翰逊无法按照党内极右翼派别的要求来制定方案，这迫使他不得不放弃在美墨边境打击非法移民的强硬安全措施和其他优先事项，以免失去民主党人的支持。</p><p>约翰逊最多只能将先前参议院通过的法案分割成不同部分，这也是众议院共和党人的偏好，最终投票将针对乌克兰、以色列和印太地区盟友的不同措施。该方案还将包括第四项议案，其中包括民主党人赞同或至少愿意接受的许多共和党优先事项：允许美国扣押被冻结的俄罗斯央行资产以重建乌克兰；对伊朗、俄罗斯、中国和贩运芬太尼的犯罪组织实施制裁；如果视频应用TikTok的中国所有者不在一年内出售其股份，则可能禁止该应用。</p><p>预计在周六的投票中通过每项议案将需要约翰逊就它们分别形成复杂的两党联盟，例如，民主党人将确保乌克兰援助获得批准，但一些该党极左翼议员将拒绝因加沙遭到破坏而支持对以色列的军援。然后，这些部分将自动拼接成一个单一的一揽子方案送交参议院，而参议院的反对者也在计划采取程序性举措，来拖延这一揽子的对外援助法案被送到总统拜登的办公桌上供其签字。</p><p>约翰逊的计划是在周六将这四项议案提交众议院全院，并于中午开始投票。其中一项法案为乌克兰提供了600亿美元。其中大部分资金将提供给美国武器制造商，用于重建耗尽的美国武器供应，约20%的资金将以贷款形式直接提供给乌克兰。不过，美国总统可以在11月15日之后取消乌克兰的债务。</p><p>第二项法案将为以色列提供约170亿美元的进攻性和防御性武器，并为加沙和其他地区提供略高于90亿美元的人道主义援助。第三项法案将为印太地区提供81亿美元以威慑中国，第四项法案充满了共和党的优先事项，包括强迫TikTok剥离和扣押俄罗斯资产。由于每项法案都将单独表决，因此支持它们的议员联盟也各不相同。</p><p>周六，众议院还将就共和党优先考虑的第五项法案进行投票，以确保边境安全并限制移民进入美国。但该法案很可能会失败，因为它需要众议院三分之二的支持，因为它是在不同的程序下进行的。外援方案随后将提交参议院，参议员们必须再次对其进行投票，然后才能将法案提交给已批准该方案的拜登总统签字。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX3y.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-950%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583%25E7%259A%2584%25E5%25AF%25B9%25E5%25A4%2596%25E6%258F%25B4%25E5%258A%25A9%25E8%25AE%25A1%25E5%2588%2592%25E6%258E%25A5%25E8%25BF%2591%25E5%259C%25A8%25E7%25BE%258E%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E9%2580%259A%25E5%2585%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=950%E4%BA%BF%E7%BE%8E%E5%85%83%E7%9A%84%E5%AF%B9%E5%A4%96%E6%8F%B4%E5%8A%A9%E8%AE%A1%E5%88%92%E6%8E%A5%E8%BF%91%E5%9C%A8%E7%BE%8E%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAX3y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=950%E4%BA%BF%E7%BE%8E%E5%85%83%E7%9A%84%E5%AF%B9%E5%A4%96%E6%8F%B4%E5%8A%A9%E8%AE%A1%E5%88%92%E6%8E%A5%E8%BF%91%E5%9C%A8%E7%BE%8E%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAX3y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX3y.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=950%E4%BA%BF%E7%BE%8E%E5%85%83%E7%9A%84%E5%AF%B9%E5%A4%96%E6%8F%B4%E5%8A%A9%E8%AE%A1%E5%88%92%E6%8E%A5%E8%BF%91%E5%9C%A8%E7%BE%8E%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E5%85%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
