--- a/articles/rfi/999987.md
+++ b/articles/rfi/999987.md
@@ -1,5 +1,5 @@
 <!--1713554102000-->
-[【视频】巴黎新桥：塞纳河上最古老的桥梁](https://www.rfi.fr/cn/%E9%AD%85%E5%8A%9B%E6%B3%95%E5%85%B0%E8%A5%BF/20240419-%E8%A7%86%E9%A2%91-%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5-%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81)
+[岸田文雄：日美关系不会因11月美国总统选举的结果而动摇](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84-%E6%97%A5%E7%BE%8E%E5%85%B3%E7%B3%BB%E4%B8%8D%E4%BC%9A%E5%9B%A011%E6%9C%88%E7%BE%8E%E5%9B%BD%E6%80%BB%E7%BB%9F%E9%80%89%E4%B8%BE%E7%9A%84%E7%BB%93%E6%9E%9C%E8%80%8C%E5%8A%A8%E6%91%87)
 ------
 
-<div>19/04/2024 - 18:18</div><img src="https://s.rfi.fr/media/display/17ae80ac-15d4-11ea-9423-005056bf7c53/w:1280/p:16x9/Embarras%20Pont%20Neuf_0.jpg"><p><strong>新桥是目前巴黎现存最古老的桥梁。 它也是第一座跨越整个塞纳河河面的桥梁。        </strong></p><div><p>在新桥建成之前，巴黎的桥梁主要是用木头建造的，因此极易失火。</p><p>新桥保留了建桥时巴黎人自发给它起的名字。 修建这座桥的决定是在1577 年做出的，当时的国王亨利三世任命了一个委员会，来确保桥梁的修建得当并对工程施工进行监督。</p><p>直到 18 世纪，新桥一直是巴黎这座城市的中心，也是许多街头艺人和商贩的最爱。桥上总是热闹非凡。</p><p>新桥两边的桥栏上有 384 个怪面装饰，是古代神话故事中森林或乡间神灵的头像，每个头像重达100多公斤。</p><p>随着时间的推移，原来的怪面装饰的某些部分已经损坏，雕像的细节因风化而模糊，因此它们需要全部更换进行修复。</p><p>历时13年的新桥修复工程在2007年揭幕，恰逢新桥建成 400 周年，以示纪念。</p><p>所以，今天看到的桥上雕像都是复制品。 不过，如有兴趣，可前往巴黎市立历史博物馆——卡纳瓦雷博物馆，在那里欣赏到这些雕像的原件。</p><p>新桥的设计和支撑桥身的拱门让人联想到罗马建筑。 桥上人行道的设计灵感也来自罗马道路。</p><p>新桥也是巴黎最早铺设人行道的桥梁之一，当时铺设人行道是为了保护行人避雨和马车溅起的泥浆之用。</p><p>这座桥自1889年起就被列为历史古迹。1991年，它和巴黎塞纳河两岸河沿一起被联合国教科文组织列入世界文化遗产名录。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX35.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%25AD%2585%25E5%258A%259B%25E6%25B3%2595%25E5%2585%25B0%25E8%25A5%25BF%2F20240419-%25E8%25A7%2586%25E9%25A2%2591-%25E5%25B7%25B4%25E9%25BB%258E%25E6%2596%25B0%25E6%25A1%25A5-%25E5%25A1%259E%25E7%25BA%25B3%25E6%25B2%25B3%25E4%25B8%258A%25E6%259C%2580%25E5%258F%25A4%25E8%2580%2581%25E7%259A%2584%25E6%25A1%25A5%25E6%25A2%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5%EF%BC%9A%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81%20-%20https%3A%2F%2Frfi.my%2FAX35.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5%EF%BC%9A%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81%20-%20https%3A%2F%2Frfi.my%2FAX35.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX35.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E3%80%90%E8%A7%86%E9%A2%91%E3%80%91%E5%B7%B4%E9%BB%8E%E6%96%B0%E6%A1%A5%EF%BC%9A%E5%A1%9E%E7%BA%B3%E6%B2%B3%E4%B8%8A%E6%9C%80%E5%8F%A4%E8%80%81%E7%9A%84%E6%A1%A5%E6%A2%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 19:38</div><img src="https://s.rfi.fr/media/display/8131e55c-fbf6-11ee-a644-005056a90284/w:1280/p:16x9/2024-04-10T143514Z_1347866304_RC2Q37ADHC0H_RTRMADP_3_USA-JAPAN.JPG"><p><strong>日本首相岸田文雄在19日的日本参院全体会议上发表观点，认为日美关系不会因11月美国总统选举的结果而动摇。他被问及共和党籍前总统特朗普再次当选时如何应对，表示“正在密切关注。对于日美同盟的重要性，不论是民主党还是共和党都存在共识，选举结果不会对日美关系产生影响。”        </strong></p><div><p>共同社报道，关于和美国总统拜登的联合声明中写明完善日企可参与美军舰船等大规模维修的机制，岸田解释称“这有益于提高美军的快速反应力，加强威慑体制，这并非基于和特定国家作战的考量”，寻求理解。</p><p>日本首相岸田文雄4月11日曾在美国国会参众两院联席会议上发表的演讲中主张，中国的对外态度和军事动向“给国际社会整体的和平与稳定带来了迄今为止最大的战略挑战”。他还说，朝鲜向俄罗斯出口弹道导弹，“增加了乌克兰的苦难”。</p><p>岸田表示，日本“作为最亲近的朋友，与美国同在”。他还提及把防卫费提高至占国内生产总值（GDP）2%、拥有反击能力（对敌基地攻击能力）等岸田政府的政策，强调“为巩固日美同盟而带头采取了一系列举措”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX40.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E5%25B2%25B8%25E7%2594%25B0%25E6%2596%2587%25E9%259B%2584-%25E6%2597%25A5%25E7%25BE%258E%25E5%2585%25B3%25E7%25B3%25BB%25E4%25B8%258D%25E4%25BC%259A%25E5%259B%25A011%25E6%259C%2588%25E7%25BE%258E%25E5%259B%25BD%25E6%2580%25BB%25E7%25BB%259F%25E9%2580%2589%25E4%25B8%25BE%25E7%259A%2584%25E7%25BB%2593%25E6%259E%259C%25E8%2580%258C%25E5%258A%25A8%25E6%2591%2587&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%EF%BC%9A%E6%97%A5%E7%BE%8E%E5%85%B3%E7%B3%BB%E4%B8%8D%E4%BC%9A%E5%9B%A011%E6%9C%88%E7%BE%8E%E5%9B%BD%E6%80%BB%E7%BB%9F%E9%80%89%E4%B8%BE%E7%9A%84%E7%BB%93%E6%9E%9C%E8%80%8C%E5%8A%A8%E6%91%87%20-%20https%3A%2F%2Frfi.my%2FAX40.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%EF%BC%9A%E6%97%A5%E7%BE%8E%E5%85%B3%E7%B3%BB%E4%B8%8D%E4%BC%9A%E5%9B%A011%E6%9C%88%E7%BE%8E%E5%9B%BD%E6%80%BB%E7%BB%9F%E9%80%89%E4%B8%BE%E7%9A%84%E7%BB%93%E6%9E%9C%E8%80%8C%E5%8A%A8%E6%91%87%20-%20https%3A%2F%2Frfi.my%2FAX40.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX40.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B2%B8%E7%94%B0%E6%96%87%E9%9B%84%EF%BC%9A%E6%97%A5%E7%BE%8E%E5%85%B3%E7%B3%BB%E4%B8%8D%E4%BC%9A%E5%9B%A011%E6%9C%88%E7%BE%8E%E5%9B%BD%E6%80%BB%E7%BB%9F%E9%80%89%E4%B8%BE%E7%9A%84%E7%BB%93%E6%9E%9C%E8%80%8C%E5%8A%A8%E6%91%87&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
